--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -4,7 +4,7 @@
 [[Image:Olea_europaea1.jpg|thumb|''Olea europaea'' (1)]]
 
 ===Etymology===
-{{etyl|fro|en}} {{term|olive|lang=fro||olive, olive tree}}, from {{etyl|la|en}} {{m|la|olīva||olive}}, from {{etyl|grc|en}} {{term|ἐλαία|lang=grc}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*loiwom}} (compare {{etyl|cu|-}} {{term|лои||tallow|lang=cu}}, {{etyl|xcl|-}} {{term|եւղ|lang=xcl||oil}}).<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>
+{{etyl|fro|en}} {{m|fro|olive||olive, olive tree}}, from {{etyl|la|en}} {{m|la|olīva||olive}}, from {{etyl|grc|en}} {{m|grc|ἐλαία}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*loiwom}} (compare {{etyl|cu|-}} {{m|cu|лои||tallow}}, {{etyl|xcl|-}} {{m|xcl|եւղ||oil}}).<ref>Radoslav Katičić, ''Ancient Languages of the Balkans, Part One'' (Paris: Mouton, 1976).</ref>
 
 ===Pronunciation===
 * {{enPR|ŏl'ĭv}}, {{IPA|/ˈɒlɪv/|lang=en}}
@@ -46,11 +46,11 @@
 * Azeri: {{t+|az|zeytun}}
 * Bashkir: {{t|ba|зәйтүн|sc=Cyrl}}
 * Basque: {{t|eu|oliba}}
-* Belarusian: {{t|be|аліўка|f|tr=alíŭka|sc=Cyrl}}, {{t|be|масліна|f|tr=maslína|sc=Cyrl}}
+* Belarusian: {{t|be|алі́ўка|f|sc=Cyrl}}, {{t|be|маслі́на|f|sc=Cyrl}}
 * Bengali: {{t|bn|জলপাই|tr=jôlôpa'i|sc=Beng}}
 * Breton: {{t|br|oliv|f}}
-* Bulgarian: {{t|bg|маслина|f|tr=maslína|sc=Cyrl}}
-* Burmese: {{t+|my|သံလွင်|tr=than lwin|sc=Mymr}}
+* Bulgarian: {{t|bg|масли́на|f|sc=Cyrl}}
+* Burmese: {{t+|my|သံလွင်|sc=Mymr}}
 * Catalan: {{t|ca|oliva|f}}
 * Chinese:
 *: Cantonese: {{t|yue|橄欖|sc=Hani}}, {{t|yue|橄榄|tr=gaam3 laam5-2|sc=Hani}}
@@ -58,7 +58,7 @@
 * Corsican: {{t+|co|aliva|f}}
 * Czech: {{t+|cs|oliva|f}}
 * Dalmatian: {{t|dlm|olea|f}}
-* Danish: {{t+|da|oliven}}
+* Danish: {{t+|da|oliven|c}}
 * Dutch: {{t+|nl|olijf|m}}
 * Erzya: {{t|myv|оймарь}}
 * Esperanto: {{t|eo|olivo}}
@@ -85,22 +85,22 @@
 * Italian: {{t+|it|oliva|m}}
 {{trans-mid}}
 * Japanese: {{t|ja|オリーブ|tr=orību}}
-* Kazakh: {{t|kk|зәйтүн|tr=zäytün|sc=Cyrl}}
+* Kazakh: {{t|kk|зәйтүн|sc=Cyrl}}
 * Khmer: {{t|km|ផ្លែអូលីវ|tr=plae ooliiv|sc=Khmr}}
 * Korean: {{t+|ko|올리브|tr=ollibeu}}
 * Kurdish: {{t+|ku|zeytûn|f}}
-* Kyrgyz: {{t|ky|зайтун|tr=zaytun|sc=Cyrl}}
+* Kyrgyz: {{t|ky|зайтун|sc=Cyrl}}
 * Latin: {{t|la|olīva|f}}, {{t|la|olea|f}}
 * Latvian: {{t|lv|olīve|f}}
 * Lithuanian: {{t|lt|alyva|f}}
 * Luxembourgish: {{t|lb|Oliv|f}}
-* Macedonian: {{t|mk|маслинка|f|tr=máslinka}}
+* Macedonian: {{t|mk|маслинка|f}}
 * Malay: {{t|ms|zaitun}}
 * Malayalam: {{t+|ml|ഒലിവ്|sc=Mlym}}
 * Maltese: {{t|mt|żebbuġa|f}}
 * Maori: {{t|mi|ōriwa}}
 * Middle Persian: {{t|pal|𐭦𐭩𐭲𐭩|tr=zayt|sc=Phli}}
-* Mongolian: {{t|mn|чидун жимс|tr=čidun žims|sc=Cyrl}}
+* Mongolian: {{t|mn|чидун жимс|sc=Cyrl}}
 * Norwegian: {{t|no|oliven}}
 * Occitan: {{t+|oc|oliva|f}}
 * Persian: {{t+|fa|زیتون|tr=zeytun}}
@@ -115,19 +115,19 @@
 *: Cyrillic: {{t|sh|маслина|f|sc=Cyrl}}
 *: Roman: {{t+|sh|maslina|f}}
 * Sicilian: {{t|sc|aliva|f}}, {{t+|scn|uliva|f}}
-* Sinhalese: {{t|si|ඔලිව්|tr=oliv|sc=Sinh}}
+* Sinhalese: {{t|si|ඔලිව්|sc=Sinh}}
 * Slovak: {{t|sk|oliva|f}}
 * Slovene: {{t+|sl|oljka|f}} (1), {{t+|sl|oliva|f}} (2)
 * Spanish: {{t+|es|aceituna|f}}, {{t+|es|oliva|f}}
 * Swedish: {{t+|sv|oliv|c}}
 * Tagalog: {{t|tl|olibo}}
-* Tajik: {{t|tg|зайтун|tr=zaytun|sc=Cyrl}}
+* Tajik: {{t|tg|зайтун|sc=Cyrl}}
 * Thai: {{t+|th|กอก|tr=gòk|sc=Thai}}, {{t|th|มะกอก|tr=má-gòk|sc=Thai}}, {{t|th|มะกอกโอลีฟ|tr=má-gòk-oh-lêef|sc=Thai}}
 * Turkish: {{t+|tr|zeytin}}
 * Turkmen: {{t+|tk|zeýtun}}
-* Ukrainian: {{t+|uk|оливка|f|tr=olývka|sc=Cyrl}}, {{t|uk|маслина|f|tr=maslýna|sc=Cyrl}}
+* Ukrainian: {{t+|uk|оли́вка|f|sc=Cyrl}}, {{t|uk|масли́на|f|sc=Cyrl}}
 * Urdu: {{t|ur|زیتون|tr=zaitūn}}
-* Uyghur: {{t|ug|زەيتۇن|tr=zeytun|sc=ug-Arab}}
+* Uyghur: {{t|ug|زەيتۇن|sc=ug-Arab}}
 * Uzbek: {{t+|uz|zaytun}}
 * Venetian: {{t|vec|oliva|f}}, {{t|vec|ołiva|f}}
 * Vietnamese: {{t|vi|ô liu}}
@@ -136,14 +136,14 @@
 {{trans-bottom}}
 
 {{trans-top|wood}}
-* Bulgarian: {{t|bg|маслина|tr=maslina}}
+* Bulgarian: {{t|bg|масли́на}}
 * Czech: {{t+|cs|oliva}}
 * Dutch: {{t|nl|olijfhout|n}}, {{t+|nl|olijvenhout|n}}
 * Finnish: {{t+|fi|oliivipuu}}
 * Greek: {{t+|el|ελιά|f}}
 * Italian: {{t+|it|olivo}}
 * Kurdish: {{t|ku|darzeytûn|f}}, {{t+|ku|zeytûn|f}}
-* Macedonian: {{t|mk|маслиновина|f|tr=maslinóvina}}
+* Macedonian: {{t|mk|маслиновина|f}}
 * Malagasy: {{t+|mg|oliva}}
 {{trans-mid}}
 * Maltese: {{t|mt|żebbuġ}}
