--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|cacchen}}, from {{etyl|xno|en}} {{term|cachier||lang=fro}}, from {{etyl|ONF.|en}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la|en}} {{term|capto|captare|lang=la}}. Akin to [[w:French language|Modern French]] {{m|fr|chasser}} (from Old French {{m|fro|chacier}}, whence English ''[[chase]]''), [[w:Spanish language|Spanish]] {{m|es|cazar}}.Displaced Middle English {{m|enm|fangen}}（“to catch”)，from Old English {{m|ang|fōn}}（“to seize, take”）
+From {{etyl|enm|en}} {{m|enm|cacchen}}, from {{etyl|xno|en}} {{term|cachier||lang=fro}}, from {{etyl|ONF.|en}}, from {{etyl|LL.|en}} {{term|captio|captiare|lang=la}}, from {{etyl|la|en}} {{term|capto|captare|lang=la}}. Akin to [[w:French language|Modern French]] {{m|fr|chasser}} (from Old French {{m|fro|chacier}}, whence {{etyl|en|-}} {{m|en|chase}}), {{etyl|es|-}} {{m|es|cazar}}. Displaced {{etyl|enm|-}} {{m|enm|fangen||to catch}}, from {{etyl|ang|-}} {{m|ang|fōn||to seize, take}} (see {{m|en|fang}}).
 
 The verb became irregular, possibly under the influence of the similar meaning {{m|en|latch}} (from {{etyl|ang|en}} {{m|ang|læċċan}}) whose past tense was {{m|en|lahte}}, {{m|en|lauhte}}, {{m|en|laught}} ({{etyl|ang|en}} {{m|ang|læhte}}) until becoming regularised in Modern English.
 
