--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -1,7 +1,7 @@
 {{also|Appendix:Variations of "eg"}}
 ==English==
 
-===Alternative forms===
+===Alternative forms of e.g.===
 * [[eg.]], [[eg]] (informal)
 * [[ex. gr.]]
 
