moved definitions from "Translingual" section to "Chinese" section <旬#34241300>

--- a/en/旬/旬.16916.wikitext
+++ b/en/旬/旬.16916.wikitext
@@ -8,9 +8,6 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=02|sn=6|four=27620|canj=PA|ids=⿹勹日}}
 
-# [[ten]]-[[day]] [[period]]
-# period of [[time]]
-
 ===See also===
 * [[复]] [[傷]] <!-- Graphically similar -->
 
@@ -31,6 +28,10 @@
 |oc=y
 |cat=n
 }}
+
+===Definitions===
+# [[ten]]-[[day]] [[period]]
+# period of [[time]]
 
 ----
 
