/* Serbo-Croatian */ <mandat#34252637>

--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -72,7 +72,7 @@
 
 ===Pronunciation===
 * {{IPA|/mǎndaːt/|lang=sh}}
-* {{hyphenation|man|dat|lang=fr}}
+* {{hyphenation|man|dat|lang=sh}}
 
 ===Noun===
 {{sh-noun|g=m|head=màndāt|r|мандат|ма̀нда̄т}}
