--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -100,7 +100,7 @@ Often abbreviated ''etc.'' or ''&c''. ''[[ampersand|Ampersand]]'' (''[[&]]'') co
 ===Adverb===
 {{head|sv|adverb}}
 
-# {{t|en|et cetera}} (and so on)
+# {{l|en|et cetera}} (and so on)
 
 {{tbot entry|Swedish|etcetera|2009|April|sv}}
 
