t+tr:[[emmek]] t-balance t+tr:[[berbat olmak]] ([[WT:EDIT|Assisted]]) <suck#34267367>

--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -115,9 +115,10 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 {{trans-top|to work the lips and tongue on}}
 * German: {{t+|de|lutschen}}
 * Greek: {{t+|el|γλείφω|sc=Grek}}, {{t+|el|πιπιλίζω|sc=Grek}}
-{{trans-mid}}
 * Portuguese: {{t+|pt|chupar}}
+{{trans-mid}}
 * Scottish Gaelic: {{t|gd|deoghail}}
+* Turkish: {{t+|tr|emmek}}
 {{trans-bottom}}
 
 {{trans-top|colloquial: term of general disparagement}}
@@ -128,8 +129,8 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * French: {{t|fr|[[être]] [[chiant]]}}, {{t|fr|[[être]] [[nul]]}}
 * German: {{t|de|mies sein}}, {{t|de|zum Kotzen sein}}, {{t|de|Scheiße sein}}
 * Greek: {{t|el|άστα να πάνε|sc=Grek}} {{qualifier|situation}}, {{t|el|είμαι μαλάκας|sc=Grek}} {{qualifier|person}}
-{{trans-mid}}
 * Icelandic: {{t|is|sökka}}, {{t+|is|ömurlegur|m}}
+{{trans-mid}}
 * Italian: {{t|it|essere una schiappa}}, {{t|it|fare schifo}}
 * Japanese: {{t|ja|サック|tr=sakku|sc=Jpan}}
 * Norwegian: {{t|no|suge}}
@@ -137,6 +138,7 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * Russian: {{t+|ru|отсто́й}} {{qualifier|noun}}
 * Spanish: {{t|es|ser un asco}}, {{t|es|dar asco}}, {{t+|es|apestar}}
 * Swedish: {{t+|sv|suga}}
+* Turkish: {{t+|tr|berbat olmak}}
 {{trans-bottom}}
 
 {{checktrans-top}}
