--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -68,13 +68,10 @@ From {{etyl|enm|en}} {{term|souken|souken, suken||lang=enm}}, from {{etyl|ang|en
 * {{sense|to be poor at}} to [[rock]], to [[rule]]
 
 ====Derived terms====
-{{der4|title=Terms derived from ''suck'' (verb)|[[insuck]]|[[suckable]]|[[sucker]]|[[sucky]]|[[sucky-sucky]]}}
+{{der4|title=Terms derived from ''suck'' (verb)|[[insuck]]|[[suckable]]|[[sucker]]|[[suckle]]|[[sucky]]|[[sucky-sucky]]}}
 
 ====Related terms====
 {{rel4|title=Terms related to ''suck'' (verb)|[[suck a big one]]|[[suck a lemon]]|[[suck arse]]|[[suck ass]]|[[suck balls]]|[[suck cock]]|[[suck donkey balls]]|[[suck donkey cock]]|[[suck donkey dick]]|[[suck face]]|[[suck hind tit]]|[[suck into]]|[[suck it]]|[[suck it up]]|[[suck lemons]]|[[suck my balls]]|[[suck off]]|[[suck on that]]|[[suck out]]|[[suck rocks]]|[[suck tits]]|[[suck up]]|[[teach grandmother to suck eggs]]}}
-
-====Related terms====
-* [[suckle]]
 
 ====Translations====
 {{trans-top|to use the mouth to pull in (liquid etc)}}
