--- a/en/偑/偑.11105.wikitext
+++ b/en/偑/偑.11105.wikitext
@@ -25,7 +25,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[fēng]] ([[feng1]])|wg=feng<sup>1</sup>}}
+{{cmn-hanzi|t|sim=㐽|pin=[[fēng]] ([[feng1]])|wg=feng<sup>1</sup>}}
 
 # {{defn|lang=cmn|sort=人09}}
 
