--- a/en/倾/倾.11084.wikitext
+++ b/en/倾/倾.11084.wikitext
@@ -1,4 +1,5 @@
 {{also|傾}}
+
 ==Translingual==
 
 ===Etymology===
@@ -7,28 +8,13 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=OPMO|ids=⿰亻顷}}
 
-# [[upset]], [[pour]] out, [[overflow]]
-
 ====References====
 * {{Han ref|kx=0109.171|hdz=10182.010|uh=503E|ud=20542}}
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=king1|y=king1|tra=傾}}
-
-# {{defn|lang=yue|sort=人08}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=傾|pin=[[qīng]] ([[qing1]])|wg=ch'ing<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
+==Chinese==
+{{zh-see|傾}}
 
 [[fr:倾]]
 [[mg:倾]]
