--- a/en/偾/偾.11150.wikitext
+++ b/en/偾/偾.11150.wikitext
@@ -1,32 +1,17 @@
 {{also|僨}}
+
 ==Translingual==
 
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=OJTO|ids=⿰亻贲}}
-
-# [[ruin]], [[cause]] [[fail]]
-# [[overthrown]]
 
 ====References====
 * {{Han ref|kx=0112.071|hdz=10186.100|uh=507E|ud=20606}}
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=|y=fan5|tra=僨}}
-
-# {{defn|lang=yue|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=僨|pin=[[fèn]] ([[fen4]]), [[kuǐ]] ([[kui3]])|wg=fen<sup>4</sup>, k'uei<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
+==Chinese==
+{{zh-see|僨}}
 
 [[fr:偾]]
 [[mg:偾]]
