--- a/en/偿/偿.11151.wikitext
+++ b/en/偿/偿.11151.wikitext
@@ -4,29 +4,13 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=11|four=|canj=OFBI|ids=⿰亻尝}}
 
-# [[repay]], [[recompense]]
-# [[restitution]]
-
 ====References====
 * {{Han ref|kx=0112.071|hdz=10189.070|uh=507F|ud=20607}}
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[soeng4]]|y=seung4|tra=償}}
-
-# {{defn|lang=yue|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=償|pin=[[cháng]] ([[chang2]])|wg=ch'ang<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
+==Chinese==
+{{zh-see|償}}
 
 [[fr:偿]]
 [[mg:偿]]
