--- a/en/坞/坞.13025.wikitext
+++ b/en/坞/坞.13025.wikitext
@@ -1,31 +1,17 @@
 {{also|塢}}
+
 ==Translingual==
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=GPVM|ids=⿰土乌}}
-
-# [[entrenchment]], [[bank]], [[low]] [[wall]]
 
 ====References====
 * {{Han ref|kx=0226.101|hdz=10426.020|uh=575E|ud=22366}}
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=|y=wu2|tra=塢}}
-
-# {{defn|lang=yue|sort=土04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=塢|pin=[[wù]] ([[wu4]])|wg=wu<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
+==Chinese==
+{{zh-see|塢}}
 
 [[fr:坞]]
 [[mg:坞]]
