--- a/en/坜/坜.13023.wikitext
+++ b/en/坜/坜.13023.wikitext
@@ -4,28 +4,13 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=GMKS|ids=⿰土历}}
 
-# a [[hole]], [[pit]]
-
 ====References====
 * {{Han ref|kx=0226.101|hdz=10422.030|uh=575C|ud=22364}}
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[lik6]]|y=lik6|tra=壢}}
-
-# {{defn|lang=yue|sort=土04}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=壢|pin=[[lì]] ([[li4]])|wg=li<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土04}}
+==Chinese==
+{{zh-see|壢}}
 
 [[fr:坜]]
 [[mg:坜]]
