--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -6,7 +6,7 @@
 * [[ex. gr.]]
 
 ===Etymology===
-Abbreviation of {{etyl|la|en}} {{m|la|exemplī grātiā||for example}}. ''Gratiā'' here is in the ablative case which is translated into the prepositional phrase "[[for the sake of|for the sake]]". ''Exempli'' is a genitive case noun meaning "of example". Therefore, the full phrase is "for the sake of example".<ref>'''2007''', John C. Traupman, ''The New College Latin and Englifgtgtsh Dictionary'', ISBN 9780553590128.</ref> Previously abbreviated to ''ex. gr.''
+Abbreviation of {{etyl|la|en}} {{m|la|exemplī grātiā||for example}}. ''Gratiā'' here is in the ablative case which is translated into the prepositional phrase "[[for the sake of|for the sake]]". ''Exempli'' is a genitive case noun meaning "of example". Therefore, the full phrase is "for the sake of example".<ref>'''2007''', John C. Traupman, ''The New College Latin and English Dictionary'', ISBN 9780553590128.</ref> Previously abbreviated to ''ex. gr.''
 
 ===Pronunciation===
 * {{IPA|/ˌiːˈdʒiː/|lang=en}}
