--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -89,7 +89,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Greek: 
 *: Ancient Greek: {{t|grc|μάχομαι}}
 * Hebrew: {{t+|he|רב|tr=rav}}, {{t+|he|נאבק|tr=ne'evák}}, {{t+|he|נלחם|tr=nilkhám}}
-* Hindi: {{t|hi|लड़ना|tr=laṛnā|sc=Deva}}, {{t|hi|झगड़ना|sc=Deva}}
+* Hindi: {{t|hi|लड़ना|tr=laṛnā|sc=Deva}}, {{t|hi|झगड़ना|tr=jhagaṛnā|sc=Deva}}
 * Hungarian: {{t+|hu|harcol}}, {{t+|hu|verekszik}}
 * Icelandic: {{t+|is|slást}}, {{t+|is|berjast}}
 * Indonesian: {{t+|id|kelahi}}, {{t+|id|tarung}}
@@ -141,7 +141,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 * Turkish: {{t+|tr|savaşmak}}, {{t+|tr|dövüşmek}}
 * Tuvan: {{t|tyv|демисежир}}
 * Ukrainian: {{t+|uk|би́тися|impf|sc=Cyrl}}; {{t+|uk|боро́тися|impf|sc=Cyrl}}
-* Urdu: {{t-needed|ur}}
+* Urdu: {{t|ur|لڑنا|tr=laṛnā|sc=ur-Arab}}, {{t|ur|جھگڑنا|tr=jhagaṛnā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|chiến đấu}}
 * Welsh: {{t+|cy|brwydro}}
 * West Frisian: {{t|fy|fjochtsje}}
