--- a/en/偸/偸.11144.wikitext
+++ b/en/偸/偸.11144.wikitext
@@ -11,12 +11,8 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[tau1]]|y=tau1}}
-
-# {{defn|lang=yue|sort=人09}}
+==Chinese==
+{{zh-see|偷|v}}
 
 ----
 
@@ -38,15 +34,6 @@
 {{ko-hanja|hangeul=투|rv=tu|mr=t'u}}
 
 # {{defn|lang=ko|sort=人09}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[tōu]] ([[tou1]])|wg=t'ou<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=人09}}
 
 [[fr:偸]]
 [[li:偸]]
