--- a/en/惱/惱.15622.wikitext
+++ b/en/惱/惱.15622.wikitext
@@ -3,7 +3,7 @@
 {{ja-forms|[[悩]]|[[恼]]|惱}}
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=09|sn=12|four=92063|canj=PVVW|ids=⿰忄⿱巛囟}}
+{{Han char|rn=61|rad=心|as=09|sn=12|four=92063|canj=PVVW|ids=⿰忄|f=𡿺|t=㐫}}
 
 # [[anger]]ed, [[filled]] with [[hate]]
 
