--- a/en/惱/惱.15622.wikitext
+++ b/en/惱/惱.15622.wikitext
@@ -15,6 +15,9 @@
 ==Chinese==
 {{zh-forms|s=恼}}
 
+===Alternative forms===
+* {{zh-l|㛴}}
+
 ===Pronunciation===
 {{zh-pron
 |m=nǎo
@@ -25,6 +28,11 @@
 |oc=y
 |cat=v
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ----
 
