--- a/en/偟/偟.11119.wikitext
+++ b/en/偟/偟.11119.wikitext
@@ -26,7 +26,8 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=人09}}
 
-# {{defn|lang=ja|sort=人09}}
+# [[agitated]]
+# [[alarmed]]
 
 ====Readings====
 * {{ja-readings|on=[[こう]] (kō), [[おう]] (ō)|kun=[[たたずむ]] (tatazumu), [[さまよふ]] (samayofu), [[たちもとほる]] (tachimotohoru), [[いとま]] (itoma)}}
