--- a/en/意/意.15651.wikitext
+++ b/en/意/意.15651.wikitext
@@ -29,50 +29,57 @@
 |mc=y
 |oc=y
 |ma=
-|cat=n
+|cat=n,v
 }}
 
+===Definitions===
+{{zh-hanzi}}
+
+# [[idea]], [[meaning]]
+# to [[anticipate]]
+# to [[pay attention]] to
+# {{abbreviation of|{{zh-l|意大利}}|lang=zh|dot=:}} [[Italy]]; [[Italian]]
+
 ====Compounds====
-{{top2}}
-* [[意表]]
-* [[意大利]]
-* [[意会]]
-* [[意见]], [[意見]]
-* [[意匠]]
-* [[意境]]
-* [[意料]]
-* [[意马心猿]]
-* [[意念]]
-* [[意气]]
-* [[意气风发]]
-* [[意气用事]]
-* [[意趣]]
-* [[意识]]
-* [[意识流]]
-* [[意识形态]]
-* [[意思]]
-* [[意图]]
-{{mid2}}
-* [[意外]]
-* [[意味]]
-* [[意味着]]
-* [[意下]]
-* [[意想]]
-* [[意向]]
-* [[意向书]]
-* [[意象]]
-* [[意兴]]
-* [[意义]]
-* [[意译]]
-* [[意欲]]
-* [[意愿]]
-* [[意蕴]]
-* [[意在言外]]
-* [[意旨]]
-* [[意志]]
-* [[意中人]]
-* [[如意]]
-{{bottom}}
+{{der3
+| {{zh-l|意表}}
+| {{zh-l|意大利}}
+| {{l|cmn|意会]]
+| {{zh-l|意見}}
+| {{l|cmn|意匠]]
+| {{l|cmn|意境]]
+| {{l|cmn|意料]]
+| {{l|cmn|意马心猿]]
+| {{l|cmn|意念]]
+| {{l|cmn|意气]]
+| {{l|cmn|意气风发]]
+| {{l|cmn|意气用事]]
+| {{l|cmn|意趣]]
+| {{l|cmn|意识]]
+| {{l|cmn|意识流]]
+| {{l|cmn|意识形态]]
+| {{zh-l|意思]]
+| {{l|cmn|意图]]
+| {{zh-l|意外]]
+| {{zh-l|意味]]
+| {{l|cmn|意味着]]
+| {{l|cmn|意下]]
+| {{zh-l|意想]]
+| {{l|cmn|意向]]
+| {{l|cmn|意向书]]
+| {{l|cmn|意象]]
+| {{l|cmn|意兴]]
+| {{l|cmn|意义]]
+| {{l|cmn|意译]]
+| {{l|cmn|意欲]]
+| {{l|cmn|意愿]]
+| {{l|cmn|意蕴]]
+| {{l|cmn|意在言外]]
+| {{l|cmn|意旨]]
+| {{l|cmn|意志]]
+| {{l|cmn|意中人]]
+| {{zh-l|如意]]
+}}
 
 ----
 
