--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -51,6 +51,9 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 |chapter=4|url=http://openlibrary.org/works/OL1796924W
 |passage=“… That woman is stark mad, Lord Stranleigh. Her own father recognised it when he bereft her of all power in the great business he '''founded'''.&nbsp;&hellip;”}}
 
+====Conjugation====
+{{en-conj-simple}}
+
 =====Related terms=====
 * [[foundation]]
 * [[founder]]
