t+pl:[[konwertować]] ([[WT:EDIT|Assisted]]) <port#34312222>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -274,6 +274,7 @@ From {{etyl|fro|en}} {{term|porter|lang=fr}}, from {{etyl|la|en}} {{term|portare
 * French: {{t+|fr|porter}}
 * Norwegian: {{t+|no|porte}}
 {{trans-mid}}
+* Polish: {{t+|pl|konwertować|impf}}
 * Swahili: {{t+|sw|mabandari}}
 * Swedish: {{t|sv|portera}}, {{t+|sv|porta}}
 * Turkish: {{t+|tr|liman}}
