--- a/en/い/いぬ.3614.wikitext
+++ b/en/い/いぬ.3614.wikitext
@@ -1,16 +1,18 @@
+{{also|イヌ}}
 ==Japanese==
+
 ===Noun===
-{{ja-noun|h|rom=inu|kata=イヌ}}
-# {{ja-def|犬}} a [[dog]]
-#: '''犬'''に毎日えさをあげてください。
-#:: '''いぬ'''にまいにちえさをあげてください。
-#:: '''''Inu''' ni mainichi esa o agetekudasai.''
-#::: Please feed the '''dog''' every day.
+{{ja-noun}}
+
+# {{ja-def|犬|狗}} [[dog]]
+# {{ja-def|戌}} the hour of the dog; a historical duel-hour equivalent to 7PM - 9PM
 
 ===Verb===
-{{ja-verb|h|type=1|rom=inu}}
+{{ja-verb}}
 
-# {{ja-def|去ぬ}} to [[leave]]
+# {{ja-def|率寝}}
+# {{ja-def|寝ぬ}} to [[sleep]]
+# {{ja-def|去ぬ|往ぬ}} to [[leave]]
 
 [[bn:いぬ]]
 [[zh-min-nan:いぬ]]
