--- a/en/昜/昜.16964.wikitext
+++ b/en/昜/昜.16964.wikitext
@@ -14,9 +14,6 @@
 * [[陽]], [[踼]], [[湯]], [[揚]], [[場]], [[腸]], [[𥯕]], [[暘]], [[煬]], [[禓]], [[𥏫]], [[楊]], [[玚]], [[𦳝]], [[瘍]], [[崵]], [[碭]], [[䵮]], [[颺]], [[愓]], [[畼]], [[餳]], [[暢]], [[鍚]]
 * [[傷]], [[觴]], [[殤]] {{qualifier|via variant}}
 
-====See also====
-* [[易]]
-
 ====References====
 * {{Han ref|kx=0492.170|dkj=13832|dj=0855.170|hdz=21499.070|uh=661C|ud=26140|bh=CEEF|bd=52975}}
 
@@ -35,6 +32,11 @@
 |ma=
 |cat=v,a
 }}
+
+===Definitions===
+{{zh-hanzi}}
+
+# {{rfdef|lang=zh}}
 
 ====References====
 *(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
