--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Pronunciation===
-* {{IPA|/ˈfɑʊnd/|lang=en}}
+* {{IPA|/fɑʊnd/|lang=en}}
 * {{audio|en-us-found.ogg|Audio (US)|lang=en}}
 * {{rhymes|aʊnd|lang=en}}
 
