--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -8,6 +8,8 @@
 From {{etyl|enm|en}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|fro|en}} {{term|cote|lang=fro}}, {{term|cotte||outer garment with sleeves|lang=fro}}, from Old {{etyl|frk|en}} {{m|frk|*kotta||coat}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kuttô}}, {{m|gem-pro|*kuttǭ||cowl, woolen cloth, coat}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gʷewd-}}, {{m|ine-pro|*gud-||woolen clothes}}. Cognate with {{etyl|goh|-}} {{term|kozza|lang=goh}}, {{term|kozzo||woolen coat|lang=goh}} (Modern German {{term|Kotze||coarse woolen blanket; woolen cape|lang=de}}), {{etyl|gml|-}} {{term|kot||coat|lang=gml}}, Ancient Greek {{term|βεῦδος||woman's attire|lang=grc}}.
 
 ===Pronunciation===
+* {{a|GA}} {{IPA|/koʊt/|lang=en}}
+* {{a|RP}} {{IPA|/kəʊt/|lang=en}}
 * {{audio|en-us-coat.ogg|Audio (US)|lang=en}}
 * {{audio|En-uk-coat.ogg|Audio (UK)|lang=en}}
 * {{rhymes|əʊt|lang=en}}
@@ -75,8 +77,8 @@ From {{etyl|enm|en}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{et
 * Italian: {{t+|it|mantello|m}}, {{t+|it|cappotto|m}}
 * Japanese: {{t|ja|コート|tr=kōto}}, {{t+|ja|外套|tr=がいとう, gaitō}}
 {{trans-mid}}
-* Khmer: {{t|km|អាវធំ|tr=aav tʰom|sc=Khmr}}
-* Korean: {{t+|ko|코트|tr=koteu}}
+* Khmer: {{t|km|អាវធំ}}
+* Korean: {{t+|ko|코트}}
 * Latin: {{t|la|pallium|n}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Luhya: {{t|luy|kumuchosi}}
@@ -191,14 +193,14 @@ From {{etyl|enm|en}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{et
 {{trans-bottom}}
 
 ===Anagrams===
-* [[ATOC#English|ATOC]]
-* [[Cato#English|Cato]], [[CATO#English|CATO]]
-* [[octa#English|octa]]
-* [[taco#English|taco]]
+* {{l|en|ATOC}}
+* {{l|en|Cato}}, {{l|en|CATO}}
+* {{l|en|octa}}
+* {{l|en|taco}}
 
 [[Category:en:Clothing]]
-
 [[Category:1000 English basic words]]
+
 [[ar:coat]]
 [[az:coat]]
 [[ca:coat]]
