--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -76,9 +76,9 @@ From {{etyl|enm|en}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{et
 * Irish: {{t|ga|cóta|m}}, {{t|ga|casóg|f}}
 * Italian: {{t+|it|mantello|m}}, {{t+|it|cappotto|m}}
 * Japanese: {{t|ja|コート|tr=kōto}}, {{t+|ja|外套|tr=がいとう, gaitō}}
-{{trans-mid}}
 * Khmer: {{t|km|អាវធំ}}
 * Korean: {{t+|ko|코트}}
+{{trans-mid}}
 * Latin: {{t|la|pallium|n}}
 * Latvian: {{t|lv|mētelis|m}}, {{t|lv|svārki|m-p}}
 * Luhya: {{t|luy|kumuchosi}}
@@ -98,12 +98,15 @@ From {{etyl|enm|en}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{et
 *: Roman: {{t+|sh|kaput|m}}
 * Slovak: {{t|sk|kabát|m}}, {{t|sk|plášť|m}}
 * Slovene: {{t+|sl|plašč|m}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|płašć|m}}
 * Spanish: {{t+|es|abrigo|m}}, {{t+|es|saco|m}}, {{t+|es|casaca|f}}
 * Swahili: {{t+|sw|koti}}
 * Swedish: {{t+|sv|rock|c}}
 * Taos: {{t|twf|kùti’ína}}
 * Ukrainian: {{t|uk|пальто́|n|sc=Cyrl}}, {{t|uk|піджа́к|sc=Cyrl}} {{qualifier|jacket}}
 * Volapük: {{t-needed|vo}}
+* Welsh: {{t|cy|côt|f}}
 {{trans-bottom}}
 
 {{trans-top|covering of material, such as paint}}
