/* Pronunciation */ <Czech Republic#34369159>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Pronunciation===
-* {{a|UK|US}} {{IPA|/ˈtʃɛk ɹ‌əˈpʌb.lɪk/|lang=en}}
+* {{a|UK|US}} {{IPA|/ˈtʃɛk ɹ‌ɪˈpʌblɪk/|lang=en}}
 * {{audio|en-us-Czech Republic.ogg|Audio (US)|lang=en}}
 
 ===Proper noun===
