--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -61,7 +61,7 @@
 ==Japanese==
 
 ===Kanji===
-{{ja-kanji|grade=c|rs=人09}}
+{{ja-kanji|grade=c|rs=人09|style=s|kyu=僞}}
 
 # {{defn|lang=ja|sort=人09}}
 
