/* Derived terms */ <cut#34375770>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -427,66 +427,65 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 * [[chop]], [[hack]], [[slice]], [[trim]]
 
 ====Derived terms====
-{{rel-top3|Terms derived from ''cut'' (verb)}}
-* [[becut]]
-* [[cut a caper]]
-* [[cut a deal]]
-* [[cut a figure]]
-* [[cut a rug]] / [[cut the rug]]
-* [[cut a swathe]]
-* [[cut a wide swathe]]
-* [[cut and paste]]
-* [[cut and run]]
-* [[cut both ways]]
-* [[cut capers]]
-* [[cut corners]]
-* [[cut down]]
-* [[cut for someone's size]]
-* [[cut from the same cloth]]
-* [[cut in]]
-* [[cut in line]]
-* [[cut it]]
-* [[cut it close]]
-{{rel-mid3}}
-* [[cut it fine]]
-* [[cut it out]]
-* [[cut like a knife]]
-* [[cut loose]]
-* [[cut off]]
-* [[cut one loose]]
-* [[cut one's coat according to one's cloth]]
-* [[cut one's losses]]
-* [[cut one's teeth]]
-* [[cut oneself]]
-* [[cut out]]
-* [[cut red tape]]
-* [[cut short]]
-* [[cut someone some slack]]/[[cut somebody some slack]]
-* [[cut the cheese]]
-* [[cut the mustard]]
-* [[cut the muster]]
-* [[cut the rug]]
-* [[cut to black]]
-{{rel-mid3}}
-* [[cut to the chase]]
-* [[cut to the quick]]
-* [[cut up]]
-* [[cut wind]]
-* [[cutthroat]]
-* [[cutting edge]]
-* [[cutting remark]]
-* [[fish or cut bait]]
-* [[forcut]]
-* [[forecut]]
-* [[fussy cut]]
-* [[have one's work cut out for one]]
-* [[incut]]
-* [[measure twice cut once]] / [[measure twice and cut once]]
-* [[offcut]]
-* [[outcut]]
-* [[overcut]]
-* [[undercut]]
-{{rel-bottom}}
+{{der3|title=Terms derived from ''cut'' (verb)
+|[[becut]]
+|[[cut a caper]]
+|[[cut a deal]]
+|[[cut a figure]]
+|[[cut a rug]] / [[cut the rug]]
+|[[cut a swathe]]
+|[[cut a wide swathe]]
+|[[cut and paste]]
+|[[cut and run]]
+|[[cut both ways]]
+|[[cut capers]]
+|[[cut corners]]
+|[[cut down]]
+|[[cut for someone's size]]
+|[[cut from the same cloth]]
+|[[cut in]]
+|[[cut in line]]
+|[[cut it]]
+|[[cut it close]]
+|[[cut it fine]]
+|[[cut it out]]
+|[[cut like a knife]]
+|[[cut loose]]
+|[[cut off]]
+|[[cut one loose]]
+|[[cut one's coat according to one's cloth]]
+|[[cut one's losses]]
+|[[cut one's teeth]]
+|[[cut oneself]]
+|[[cut out]]
+|[[cut red tape]]
+|[[cut short]]
+|[[cut someone some slack]]
+|[[cut the cheese]]
+|[[cut the mustard]]
+|[[cut the muster]]
+|[[cut the rug]]
+|[[cut to black]]
+|[[cut to the chase]]
+|[[cut to the quick]]
+|[[cut up]]
+|[[cut wind]]
+|[[cutthroat]]
+|[[cutting edge]]
+|[[cutting remark]]
+|[[fish or cut bait]]
+|[[forcut]]
+|[[forecut]]
+|[[fussy cut]]
+|[[have one's work cut out for one]]
+|[[incut]]
+|[[measure twice and cut once]]
+|[[trust everybody, but cut the cards]]
+|[[offcut]]
+|[[outcut]]
+|[[overcut]]
+|[[undercut]]
+}}
 
 ====Translations====
 {{trans-top|to perform an incision}}
