--- a/en/昷/昷.16992.wikitext
+++ b/en/昷/昷.16992.wikitext
@@ -3,8 +3,6 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=04|sn=9|four=|canj=ABT|ids=⿱日皿}}
 
-# to [[feed]] a [[prisoner]]
-
 ====References====
 * {{Han ref|kx=0494.090|dkj=13870|dj=0859.030|hdz=21500.090|uh=6637|ud=26167}}
 
@@ -22,6 +20,9 @@
 |ma=
 |cat=v
 }}
+
+===Definitions===
+# to [[feed]] a [[prisoner]]
 
 ====References====
 *(''Cantonese'') [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
