t+khb:[[ᦷᦃ]] t+za:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <bridge#34377972>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -172,8 +172,9 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Luganda: {{t|lg|olutindo}}
 * Lun Bawang: {{t|lnd|afir}}
 * Luxembourgish: {{t+|lb|Bréck|f}}
-* Macedonian: {{t|mk|мост|m|sc=Cyrl}}
+* Lü: {{t|khb|ᦷᦃ}}
 {{trans-mid}}
+* Macedonian: {{t|mk|мост|m|sc=Cyrl}}
 * Malagasy: {{t+|mg|tetezana}}
 * Malay: {{t|ms|jambatan}}, {{t|ms|titi}}, {{t|ms|titian}}, {{t|ms|jambat}}
 * Malayalam: {{t+|ml|പാലം|sc=Mlym}}
@@ -258,6 +259,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Yakut: {{t|sah|муоста|sc=Cyrl}}, {{t|sah|күргэ|sc=Cyrl}}
 * Yiddish: {{t|yi|בריק|f|tr=brik}}
 * Yoruba: {{t|yo|afárá}}
+* Zhuang: {{t-needed|za}}
 * Zulu: {{t|zu|ibhuloho}}
 {{trans-bottom}}
 
