--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -259,7 +259,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Yakut: {{t|sah|муоста|sc=Cyrl}}, {{t|sah|күргэ|sc=Cyrl}}
 * Yiddish: {{t|yi|בריק|f|tr=brik}}
 * Yoruba: {{t|yo|afárá}}
-* Zhuang: {{t-needed|za}}
+* Zhuang: {{t|za|giuz}}
 * Zulu: {{t|zu|ibhuloho}}
 {{trans-bottom}}
 
