--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -70,6 +70,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * Armenian: {{t|hy|հիմքը դնել}}, {{t|hy|հիմքը գցել}}
 * Aromanian: {{t|rup|fundedz}}
 * Bulgarian: {{t+|bg|основавам|sc=Cyrl}}
+* Catalan: {{t+|ca|fundar}}
 * Czech: {{t+|cs|založit}}
 * Danish: {{t+|da|grundlægge}}
 * French: {{t+|fr|fonder}}
@@ -80,8 +81,8 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * Japanese: {{t|ja|基礎|alt=基礎を築く|tr=kiso wo kizuku}}
 * Khmer: {{t+|km|បង្កើត|tr=bɑŋkaət|sc=Khmr}}
 * Korean: {{t-needed|ko}}
-* Ngazidja Comorian: {{t|zdj|tsenga|alt=utsenga}}
 {{trans-mid}}
+* Ngazidja Comorian: {{t|zdj|tsenga|alt=utsenga}}
 * Norwegian: {{t|no|grunnlegge}}
 * Old English: {{t|ang|astemnian}}, {{t|ang|gegrundweallian}}
 * Polish: {{t+|pl|budować}}, {{t+|pl|zbudować}}, {{t+|pl|tworzyć}}, {{t+|pl|stworzyć}}
