--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -154,6 +154,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Maltese: {{t|mt|tkellem}}
 {{trans-mid}}
 * Marathi: {{t|mr|बोलणे|sc=Deva}}
+* Meänkieli: {{t|fit|praatata}}
 * Mingrelian: {{t-needed|xmf}}
 * Mongolian: {{t|mn|ярих|sc=Cyrl}}
 * Nahuatl: {{t|nah|tlatoa}}
@@ -226,6 +227,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * Finnish: {{t+|fi|puhua}}, {{t+|fi|keskustella}}, {{t+|fi|jutella}}
 * Italian: {{t+|it|conversare}}
 {{trans-mid}}
+* Meänkieli: {{t|fit|praatata}}
 * Swedish: {{t+|sv|konversera}}, {{t+|sv|snacka}}, {{t|sv|tala samman}}, {{t+|sv|samtala}}
 {{trans-bottom}}
 
