--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -67,8 +67,8 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Asturian: {{t|ast|falda|f}}, {{t|ast|saya|f}}
 * Baluchi: {{t|bal|دامن|tr=dáman}}
 * Basque: {{t+|eu|gona}}
-* Belarusian: {{t|be|спадніца|f|tr=spadníca|sc=Cyrl}}
-* Bulgarian: {{t+|bg|пола|f|tr=polá|sc=Cyrl}}
+* Belarusian: {{t|be|спадні́ца|f|sc=Cyrl}}
+* Bulgarian: {{t+|bg|пола́|f|sc=Cyrl}}
 * Catalan: {{t+|ca|faldilla|f}}
 * Chamicuro: {{t|ccc|ita'la}}
 * Chinese:
@@ -113,7 +113,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|сукња|f}}
 *: Roman: {{t+|sh|suknja|f}}
-* Sinhalese: {{t+|si|සාය|tr=sāya|sc=Sinh}}
+* Sinhalese: {{t+|si|සාය|sc=Sinh}}
 * Slovak: {{t|sk|sukňa|f}}
 * Slovene: {{t+|sl|krilo|n}}
 * Spanish: {{t+|es|falda|f}}, {{t+|es|enaguas|f-p}} {{qualifier|Costa Rica|Nicaragua}}, {{t+|es|pollera|f}} {{qualifier|Argentina|Chile|Paraguay|Uruguay}}, {{t|es|saya|f}} {{qualifier|Cuba}}
@@ -123,7 +123,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Telugu: {{t+|te|పరికిణి|tr=parikiNi}}
 * Thai: {{t+|th|กระโปรง|tr=grà-bprohng|sc=Thai}}
 * Turkish: {{t+|tr|etek}}
-* Ukrainian: {{t+|uk|спідниця|f|tr=spidnýcja|sc=Cyrl}}
+* Ukrainian: {{t+|uk|спідни́ця|f|sc=Cyrl}}
 * Urdu: {{t|ur|سکرٹ|f|tr=skarṭ|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|váy}}
 * Volapük: {{t+|vo|juüp}}
@@ -173,7 +173,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 {{trans-bottom}}
 
 {{trans-top|slang for woman}}
-* Bulgarian: {{t|bg|фуста|f|tr=fústa|sc=Cyrl}}
+* Bulgarian: {{t|bg|фу́ста|f|sc=Cyrl}}
 * Czech: {{t+|cs|ženská|f}}
 * Finnish: {{t+|fi|hame}}
 * German: {{t+|de|Rock|m}}, {{t|de|Weiberrock|m}}
@@ -201,7 +201,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Arabic: {{t-check|ar|التنورَة|f}}
 * Azeri: {{t-check|az|yubka}}
 * Basque: {{t-check|eu|gona}}
-* Bulgarian: {{t+check|bg|пола|tr=pola|f|sc=Cyrl}}
+* Bulgarian: {{t+check|bg|пола|f|sc=Cyrl}}
 * Estonian: {{t-check|et|seelik}}
 * West Frisian: {{t-check|fy|jûpe|f}}
 * Georgian: {{t-check|ka|ქვედაკაბა}}
@@ -212,7 +212,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{etyl|gem-pro|en}} {{m|gem-
 {{trans-mid}}
 * Latvian: {{t-check|lv|stērbele|f}}
 * Lithuanian: {{t-check|lt|sijonas}}
-* Mongolian: {{t-check|mn|банзал|tr=banzal|sc=Cyrl}}
+* Mongolian: {{t-check|mn|банзал|sc=Cyrl}}
 * Norwegian: {{t-check|no|skjørt}}
 * Papiamentu: {{t-check|pap|saya}}
 * Persian: {{t-check|fa|دامن دوخت|sc=fa-Arab}}
