--- a/en/p/push.8439.wikitext
+++ b/en/p/push.8439.wikitext
@@ -147,7 +147,7 @@
 * Urdu: {{t|ur|دھکیلنا|tr=dhakelnā|sc=ur-Arab}}
 * Venetian: {{t+|vec|pender}}, {{t+|vec|spender}}
 * Vietnamese: {{t+|vi|xô}}, {{t+|vi|đẩy}}
-* Waray: {{t+|war|ig-tulang}}, {{t+|war|gin-tulang}}, {{t+|war|i-duso}}, {{t+|war|ig-duso}}
+* Waray-Waray: {{t+|war|ig-tulang}}, {{t+|war|gin-tulang}}, {{t+|war|i-duso}}, {{t+|war|ig-duso}}
 * West Frisian: {{t|fy|triuwe}}
 {{trans-bottom}}
 
@@ -256,7 +256,7 @@
 * Spanish: {{t|es|empujón|m}}
 * Swedish: {{t+|sv|ryck}}
 * Telugu: {{t|te|వెనుకకు నెట్టి ముందుకు పోవు|sc=Telu}}
-* Waray: {{t+|war|tu-lang}}, {{t+|war|du-so}}
+* Waray-Waray: {{t+|war|tu-lang}}, {{t+|war|du-so}}
 {{trans-bottom}}
 
 {{trans-top|act of tensing the muscles of the abdomen in order to expel its contents}}
