--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -1,7 +1,7 @@
 {{also|悪|恶|亞|噩}}
+
 ==Translingual==
-{{ja-forms|[[悪]]|[[恶]]|惡}}
-[[Category:CJKV characters simplified differently in Japan and China|惡0]]
+{{Han simplified forms|惡|悪|恶}}
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=12|four=10331|canj=MMP|ids=⿱亞心}}
