--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -1,6 +1,6 @@
 {{also|壞}}
 ==Translingual==
-{{ja-forms|[[壊]]|坏|[[壞]]}}
+{{Han simplified forms|壞|壊|坏}}
 {{stroke order|strokes=7}}
 
 ===Etymology===
@@ -56,8 +56,6 @@
 {{vi-hantu|[[hoại]]|rs=土04}}
 
 # {{defn|lang=vi|sort=土04}}
-
-[[Category:CJKV characters simplified differently in Japan and China|壞2]]
 
 [[es:坏]]
 [[fr:坏]]
