--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -15,7 +15,38 @@
 ----
 
 ==Chinese==
+
+===Etymology 1===
 {{zh-see|壞}}
+
+===Etymology 2===
+{{zh-see|坯|v}}
+
+===Etymology 3===
+{{zh-forms}}
+
+===Pronunciation===
+{{zh-pron
+|m=peí
+|oc=y
+|mc=y
+|cat=n,v
+}}
+
+===Noun===
+{{zh-noun}}
+
+# Unburnt pottery and bricks.
+# A short hill.
+# A wall.
+
+===Verb===
+{{zh-verb}}
+
+# To use earth to fill a crack.
+
+===References===
+* {{R:twedu|A00755}}
 
 ----
 
