--- a/en/坏/坏.13010.wikitext
+++ b/en/坏/坏.13010.wikitext
@@ -40,6 +40,10 @@
 # A short hill.
 # A wall.
 
+====See also====
+* {{sense|unburnt pottery}} {{zh-l|坯}}
+* {{sense|hill}} {{zh-l|坯}}
+
 ===Verb===
 {{zh-verb}}
 
