--- a/en/坯/坯.13042.wikitext
+++ b/en/坯/坯.13042.wikitext
@@ -12,12 +12,39 @@
 
 ----
 
-==Cantonese==
+==Chinese==
 
-===Hanzi===
-{{yue-hanzi|jyut=|y=pui1}}
+===Etymology 1===
+{{zh-see|壞|v}}
 
-# {{defn|lang=yue|sort=土05}}
+===Etymology 2===
+{{zh-see|坏|v}}
+
+===Etymology 1===
+{{zh-forms}}
+
+====Pronunciation====
+{{zh-pron
+|m=peī,pī
+|c=pui1
+|h=pfs=
+|md=
+|mn=phe
+|w=
+|mc=y
+|oc=y
+|cat=n
+}}
+
+====Definitions====
+{{zh-hanzi}}
+
+# Unburnt pottery and bricks.
+# A short hill.
+
+=====See also=====
+* {{sense|unburnt pottery}} {{zh-l|坏}}
+* {{sense|hill}} {{zh-l|坏}}
 
 ----
 
@@ -39,15 +66,6 @@
 {{ko-hanja|hangeul=배|rv=bae|mr=pae}}
 
 # {{defn|lang=ko|sort=土05}}
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[pī]] ([[pi1]])|wg=p'i<sup>1</sup>}}
-
-# {{defn|lang=cmn|sort=土05}}
 
 ----
 
