--- a/en/惱/惱.15622.wikitext
+++ b/en/惱/惱.15622.wikitext
@@ -1,6 +1,7 @@
 {{also|悩|恼}}
+
 ==Translingual==
-{{ja-forms|[[悩]]|[[恼]]|惱}}
+{{Han simplified forms|惱|悩|恼}}
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=09|sn=12|four=92063|canj=PVVW|ids=⿰忄𡿺}}
@@ -63,8 +64,6 @@
 {{vi-hantu|[[não]], [[náo]]|rs=心09}}
 
 # {{defn|lang=vi|sort=心09}}
-
-[[Category:CJKV characters simplified differently in Japan and China|惱0]]
 
 [[zh-min-nan:惱]]
 [[fr:惱]]
