t+cs:[[rvačka]] ([[WT:EDIT|Assisted]]) <fight#34401085>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -411,6 +411,7 @@ The noun is from {{etyl|ang|en}} {{term|feoht|lang=ang}}, from the verb; compare
 
 {{trans-top|physical confrontation}}
 * Bulgarian: {{t+|bg|бой|m|sc=Cyrl}}
+* Czech: {{t+|cs|rvačka|f}}
 * Danish: {{t|da|slagsmål}}, {{t+|da|ballade}}
 * Dutch: {{t+|nl|gevecht|n}}, {{qualifier|colloquial|Flanders}} {{t+|nl|boel|m}}
 * Finnish: {{t+|fi|tappelu}}, {{t+|fi|taistelu}}
