--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -76,11 +76,11 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 ##*:You say you've got to go home. Well at least there's someone there that you can talk to. And you never have to face up to the night on your own. Jesus, it must be great to be '''straight'''.
 ##*{{quote-book|author=Tracy Quan|authorlink=Tracy Quan|title=Diary of a Manhattan Call Girl: A Novel|location=New York, N.Y.|publisher=[[w:Crown Publishing Group|Crown Publishers]]|year=2007|isbn=978-0-307-42056-5|passage="When you say he's a '''straight''' guy, you mean{{nb...}}?" I held up my left hand as if it were a shield and spun my ring around. I told her: "He works on Wall Street.{{...}}He wouldn't understand my business. He's always had a '''straight''' job. His entire life he's been so&nbsp;– so normal that he doesn't even know how normal he is.{{...}}He doesn't know I'm a hooker. I'm pretending to be a '''straight''' chick. And it's working! And that makes him a straight guy. It's&nbsp;... I feel like Dr. Frankenhooker."}}
 ##{{lb|en|colloquial|slang|pejorative}} [[boring|Boring]], [[mainstream]], [[unadventurous]], [[unimaginative]]. {{defdate|from 20<sup>th</sup>c.}}
-##*'''1989''', {{w|Gus Van Sant}}, ''{{w|Drugstore Cowboy}}'':
-##*:‘For all the boredom the '''straight''' life brings, it's not too bad.’
 ##*'''1998''', Eileen Fitzpatrick & Dominic Pride, ''[[w:Billboard (magazine)|Billboard]]'', 17 October 1998:
 ##*:‘Her last album was a bit too '''straight''',’ he says, ‘but this one puts her in a more contemporary framework and softens her music.’
 ##{{lb|en|colloquial}} Not using [[alcohol]], [[drugs]], ''etc.'' {{defdate|from 20<sup>th</sup>c.}}
+##*'''1989''', {{w|Gus Van Sant}}, ''{{w|Drugstore Cowboy}}'':
+##*:For all the boredom the '''straight''' life brings, it's not too bad.
 ##*'''2001''', Ruella Frank, ''Body of Evidence'', p.28:
 ##*:‘Alex's dad used a lot of drugs. He's been '''straight''' for years now, but it took a long time for him to be able to deal with his feelings.’
 ##{{lb|en|colloquial}} [[heterosexual|Heterosexual]].
