--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -37,7 +37,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 #{{lb|en|obsolete|rare}} [[strait|Strait]]; [[narrow]].
 #*Sir {{w|John Mandeville}} (c.1350)
 #*:Egypt is a long country, but it is '''straight''', that is to say, narrow.
-#{{lb|en|heading}} ''Figurative uses.''
+# ''Figurative uses.''
 ##Free from [[dishonesty]]; [[honest]], law-abiding. {{defdate|from 16th c.}}
 ##*'''1879''', {{w|Anthony Trollope}}, ''John Caldigate'':
 ##*:‘It wasn't the proper thing, squoire. It wasn't '''straight'''.’
@@ -70,12 +70,11 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 ##:{{ux|en|a '''straight''' Republican;&emsp; a '''straight''' Democrat}}
 ##{{lb|en|US|politics}} Containing the names of all the regularly nominated candidates of a party and no others.
 ##:{{ux|en|a '''straight''' ballot}}
-#{{lb|en|heading}} ''Colloquial uses.''
-##{{lb|en|colloquial}} [[conventional|Conventional]], socially acceptable. {{defdate|from 20<sup>th</sup>c.}}
+# ''Colloquial uses.''
+##{{lb|en|colloquial}} [[conventional|Conventional]], [[mainstream]], socially acceptable. {{defdate|from 20<sup>th</sup>c.}}
 ##*'''1994''', {{w|Jarvis Cocker}}, ‘Do You Remember the First Time?’:
 ##*:You say you've got to go home. Well at least there's someone there that you can talk to. And you never have to face up to the night on your own. Jesus, it must be great to be '''straight'''.
 ##*{{quote-book|author=Tracy Quan|authorlink=Tracy Quan|title=Diary of a Manhattan Call Girl: A Novel|location=New York, N.Y.|publisher=[[w:Crown Publishing Group|Crown Publishers]]|year=2007|isbn=978-0-307-42056-5|passage="When you say he's a '''straight''' guy, you mean{{nb...}}?" I held up my left hand as if it were a shield and spun my ring around. I told her: "He works on Wall Street.{{...}}He wouldn't understand my business. He's always had a '''straight''' job. His entire life he's been so&nbsp;– so normal that he doesn't even know how normal he is.{{...}}He doesn't know I'm a hooker. I'm pretending to be a '''straight''' chick. And it's working! And that makes him a straight guy. It's&nbsp;... I feel like Dr. Frankenhooker."}}
-##{{lb|en|colloquial|slang|pejorative}} [[boring|Boring]], [[mainstream]], [[unadventurous]], [[unimaginative]]. {{defdate|from 20<sup>th</sup>c.}}
 ##*'''1998''', Eileen Fitzpatrick & Dominic Pride, ''[[w:Billboard (magazine)|Billboard]]'', 17 October 1998:
 ##*:‘Her last album was a bit too '''straight''',’ he says, ‘but this one puts her in a more contemporary framework and softens her music.’
 ##{{lb|en|colloquial}} Not using [[alcohol]], [[drugs]], ''etc.'' {{defdate|from 20<sup>th</sup>c.}}
@@ -341,13 +340,13 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 ## A part of a [[racecourse]], [[running]] [[track]] or other road, ''etc.'', that is not [[curved]].
 ##* {{quote-book|author=Robert Newton|title=Runner|location=New York, N.Y.|publisher={{w|Alfred A. Knopf}}|year=2009|page=191|isbn=978-0-307-49035-3|passage=After four grueling laps, the race had come down to a sprint. Into the '''straight''', although my legs were burning, I called on them for more, and they responded. On my inside the maroon singlet came with me, until it was just the two of us heading for the line.}}
 ##* {{quote-book|author=Gene W. Zepp|title=24 Heures Du Mans|location=[S.l.]|publisher={{w|Xlibris}}|year=2011|page=19|isbn=978-1-4628-6700-4|passage=Seppi started the engine, then shifted first gear and sped away into second, then third and fourth gear. Frank heard the roar of the Porsche's engine further down the '''straight''' and the back short straight. He held a stopwatch in his hand, waiting for him to come up into the '''straight''' from the hairpin curve.}}
+# {{context|[[poker]]|lang=en}} Five cards in [[sequence]].
 # ''Colloquial uses.''
 ## A [[heterosexual]].
 ##: ''My friends call '''straights''' "heteros".''
 ## {{context|slang|lang=en}} A [[normal]] [[person]]; someone in [[mainstream]] society.
 ##* {{quote-video|year=1989|title=[[wikipedia:Ghostbusters II|Ghostbusters II]]|people=[[wikipedia:Bill Murray|Bill Murray]]|role=[[wikipedia:Peter Venkman|Peter Venkman]]|passage=Boys! Boys! You're scaring the '''straights''', okay? Is there any way that we could do this tomorrow?}}
 ##* {{quote-book|year=2014|first=Matthew D.|last=Tribbe|title=No Requiem for the Space Age|chapter=Turning a Miracle into a Bummer|isbn=9780199313525|page=150|passage=More importantly, ''Blows Against the Empire'' {{...}} more than any other work revealed the split vision towards space exploration among many in the counter-culture: a romantic vision of the freedom offered by space that had been fostered by a lifetime of science fiction consumption, immersion in a technological society, the countercultural yearning for speed and “the road,” and, thanks to LSD and other hallucinogens, a unique preappreciation of space traveling not available to '''straights''', versus the bland, oppressive vision of exploration offered by NASA, itself just one part of a larger destructive system that was devastating Earth and that could only offer further oppression in space, not liberation.}}
-## {{context|[[poker]]|lang=en}} Five cards in [[sequence]].
 ## {{context|slang|lang=en}} A [[cigarette]], particularly one containing [[tobacco]] instead of [[marijuana]]. Also [[straighter#Noun|straighter]]. {{defdate|from 20th c.}}
 ##* ['''1923''', J[oseph] Manchon, ''Le slang : lexique de l'anglais familier et vulgaire : précédé d'une étude sur la pronunciation et la grammaire populaires'', p. 296:
 ##*: A straight = a straighter = a straight cut, une cigarette en tabac de Virginie.]
