--- a/en/旳/旳.16923.wikitext
+++ b/en/旳/旳.16923.wikitext
@@ -4,8 +4,6 @@
 ===Han character===
 {{Han char|rn=72|rad=日|as=03|sn=7|four=67020|canj=API,APM|ids=⿰日勺}}
 
-# {{defn|Han|sort=日03}}
-
 ====References====
 * {{Han ref|kx=0490.130|dkj=13760|dj=0851.140|hdz=21487.150|uh=65F3|ud=26099|bh=CAFA|bd=51962}}
 *[http://www.zdic.net/z/1b/js/65F3.htm zdic.net (Han Dian)]
@@ -13,57 +11,27 @@
 ----
 
 ==Chinese==
+
+===Etymology 1===
+{{zh-see|的|v}}
+
+===Etymology 2===
 {{zh-forms}}
 
-===Pronunciation 1===
-{{zh-pron
-|m=de,di
-|ma=y
-|m_note=di is used in poetry, songs
-|c=dik1
-|c_note=only in formal writing, vernacular particle = {{zh-l|嘅}}
-|mn=ê
-|mn_note=cognate
-|mc=
-|oc=
-|cat=part
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# {{cx|Beginning Mandarin|lang=zh}} {{non-gloss definition|Used after an attribute. Indicates that the previous word has [[possessive|possession]] of the next one. In English it functions like [['s|’s]] (or like the word “[[of]]” but with the position of [[possessor]] and [[possessee]] switched.)}} [['s|’s]] , [[of]]
-
-===Pronunciation 2===
-{{zh-pron
-|m=dí
-|ma=y
-|c=dik1
-|h=pfs=tit
-|mn=tek
-|w=4tiq
-|cat=adv
-}}
-
-===Definitions===
-{{zh-hanzi}}
-
-# [[really]]
-# [[truly]]
-
-===Pronunciation 3===
+====Pronunciation====
 {{zh-pron
 |m=dì
-|ma=y
-|c=dik1
-|cat=n
+|cat=adj
 }}
 
-===Definitions===
-{{zh-hanzi}}
+====Adjective====
+{{zh-adj}}
 
-# [[target]]
-# [[objective]]
+# [[clear]]
+
+===References===
+* {{R:twedu|B01521}}
+* [http://yedict.com/htm/65/65F3.htm yedict.com (叶典)]
 
 [[fr:旳]]
 [[pl:旳]]
