--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -110,7 +110,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 
 ===Noun===
 {{en-noun}}
-[[File:Max-cut.svg|thumb|A '''cut''' (15) in a graph with five vertices, which partitioned it into two subgroups (one with white vertices and another with black vertices).]]
+[[File:Max-cut.svg|thumb|A '''cut''' (graph theory sense) in a graph with five vertices, which partitioned it into two subgroups (one with white vertices and another with black vertices).]]
 
 # An opening resulting from cutting.
 #: ''Look at this '''cut''' on my finger!''
