--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -68,7 +68,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Hungarian: {{t+|hu|hány}}
 * Icelandic: {{t+|is|æla}}, {{t|is|gubba}}, {{t|is|spúa}}, {{t+|is|spýja}}, {{t|is|kasta upp}}
 * Indonesian: {{t+|id|memuntahkan}}, {{t+|id|muntah}}
-* Irish: {{t|ga|aisig}}
+* Irish: {{t|ga|aisig}}, {{t|ga|caith aníos}}, {{t|ga|cuir aníos}}
 *: Old Irish: {{t|sga|sceid|alt=sceïd}}
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
 * Japanese: {{t+|ja|吐く|tr=[[はく]], haku|sc=Jpan}}, {{t+|ja|嘔吐|tr=おうとする, ōto suru|alt=嘔吐する|sc=Jpan}}, {{t|ja|戻す|tr=もどす, modosu|sc=Jpan}}
