t+ga:[[bréitse]] t+ga:[[bréitseáil]] t+ga:[[cur]] t+ga:[[sceith]] t+ga:[[urlacan]] t-balance t+ga:[[urlaic]] t+ga:[[múisc]] t+ga:[[orla]] t+ga:[[sceathrach]] t+ga:[[sceathraigh]] t+ga:[[taoisceáil]] t+ga:[[tonntaoscadh]] ([[WT:EDIT|Assisted]]) <vomit#34411866>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -68,7 +68,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Hungarian: {{t+|hu|hány}}
 * Icelandic: {{t+|is|æla}}, {{t|is|gubba}}, {{t|is|spúa}}, {{t+|is|spýja}}, {{t|is|kasta upp}}
 * Indonesian: {{t+|id|memuntahkan}}, {{t+|id|muntah}}
-* Irish: {{t|ga|aisig}}, {{t|ga|caith aníos}}, {{t|ga|cuir aníos}}, {{t|ga|caith suas}}
+* Irish: {{t|ga|aisig}}, {{t|ga|caith aníos}}, {{t|ga|cuir aníos}}, {{t|ga|caith suas}}, {{t|ga|bréitseáil}}, {{t|ga|sceith}}, {{t|ga|urlaic}}, {{t|ga|sceathraigh}}
 *: Old Irish: {{t|sga|sceid|alt=sceïd}}
 * Italian: {{t+|it|vomitare}}, {{t+|it|rimettere}}
 * Japanese: {{t+|ja|吐く|tr=[[はく]], haku|sc=Jpan}}, {{t+|ja|嘔吐|tr=おうとする, ōto suru|alt=嘔吐する|sc=Jpan}}, {{t|ja|戻す|tr=もどす, modosu|sc=Jpan}}
@@ -154,14 +154,14 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 * Greek: {{t+|el|έμεσμα|n}}, {{t+|el|εμετός|m}}
 * Hebrew: {{t|he|קא|tr=kei}}
 * Hungarian: {{t+|hu|hányás}}, {{t|hu|hányadék}}
-* Irish: {{t|ga|aiseag|m}}, {{t|ga|urlacan|m}}
+* Irish: {{t|ga|aiseag|m}}, {{t|ga|urlacan|m}}, {{t|ga|bréitse|m}}, {{t|ga|cur|m}}, {{t|ga|sceith|f}}, {{t|ga|urlacan|m}}, {{t|ga|múisc|f}}, {{t|ga|orla|m}}, {{t|ga|sceathrach|f}}
 * Italian: {{t+|it|vomito|m}}
 * Japanese: {{t|ja|反吐|tr=へど, hedo|sc=Jpan}}
 * Khmer: {{t|km|កំអួត|tr=kɑm’uət|sc=Khmr}}
 * Korean: {{t-needed|ko}}
+{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t|ckb|ڕشانه‌وه‌|sc=ku-Arab}}
-{{trans-mid}}
 * Latin: {{t|la|vomitus|m}}
 * Latvian: {{t|lv|vēmekļi|m-p}}
 * Lithuanian: {{t|lt|vėmalai|p}}
@@ -188,6 +188,7 @@ From {{etyl|enm|en}} {{term|vomiten|lang=enm}}, from {{etyl|la|en}} {{term|vomit
 
 {{trans-top|the act of vomiting}}
 * Georgian: {{t|ka|პირღებინება}}, {{t|ka|ჩანჩქერო}}, {{t+|ka|ღებინება}}, {{t|ka|რწყევა}}
+* Irish: {{t|ga|urlacan|m}}, {{t|ga|orla|m}}, {{t|ga|sceathrach|f}}, {{t|ga|taoisceáil|f}}, {{t|ga|tonntaoscadh|m}} {{qualifier|sudden}}
 {{trans-mid}}
 * Maori: {{t|mi|ruakitanga}}
 {{trans-bottom}}
