--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -122,6 +122,7 @@ From {{etyl|ML.|en}} {{term|lang=la|secretarius||one entrusted with secrets}}, f
 {{trans-top|leading or managerial position in certain organizations}}
 * Czech: {{t|cs|tajemník|m}}
 * Finnish: {{t+|fi|sihteeri}}
+* German: {{t+|de|Sekretär|m}}
 * Greek: {{t+|el|γραμματέας|m|f}}
 * Hungarian: {{t+|hu|főtitkár}}
 * Irish: {{t|ga|rúnaí|m}}
