--- a/en/垒/垒.13078.wikitext
+++ b/en/垒/垒.13078.wikitext
@@ -1,11 +1,10 @@
 {{also|壘}}
+
 ==Translingual==
-{{ja-forms|[[塁]]|垒|[[壘]]}}
+{{Han simplified forms|壘|塁|垒}}
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=IIIG|ids=⿱厽土}}
-
-# [[rampart]], [[military]] [[wall]]
 
 ====References====
 * {{Han ref|kx=0227.390|dkj=05039|dj=0463.240|hdz=10442.130|uh=5792|ud=22418}}
@@ -14,8 +13,6 @@
 
 ==Chinese==
 {{zh-see|壘}}
-
-[[Category:CJKV characters simplified differently in Japan and China|壘2]]
 
 [[fr:垒]]
 [[mg:垒]]
