--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -12,7 +12,7 @@ From {{etyl|enm|en}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang|en}} {{
 * {{rhymes|iːk|lang=en}}
 
 ===Verb===
-{{en-verb|speaks|speaking|spoke|past2=spake|spoken}}
+{{en-verb|speaks|speaking|spoke|past2=spake|past2_qual=archaic|spoken}}
 [[File:David Lynch -microphone -10Aug2007-2p.jpg|thumb|right|[[w:David Lynch|David Lynch]] speaks before a group.]]
 
 # {{context|intransitive|lang=en}} To [[communicate]] with one's [[voice]], to [[say]] [[word]]s [[out loud]].
