--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -193,7 +193,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Kven: {{t|fkv|Tuiska}}
 * Kyrgyz: {{t|ky|Германия|sc=Cyrl}}
 * Ladino: {{t|lad|Almania}}
-* Lao: {{t|lo|ປະເທດເຢັຽລະມັນ|sc=Laoo}}, {{t|lo|ເຢັຽລະມັນ|sc=Laoo}}, {{t|lo|ປະເທດເຢຍຣະມັນ}}, {{t|lo|ເຢຍຣະມັນ}}
+* Lao: {{t|lo|ປະເທດເຢັຽລະມັນ|sc=Laoo}}, {{t|lo|ເຢັຽລະມັນ|sc=Laoo}}, {{t|lo|ປະເທດເຢຍຣະມັນ}}, {{t|lo|ເຢຍຣະມັນ}}, {{t|lo|ປະເທດເຢັຍຣະມັນ}}, {{t|lo|ເຢັຍຣະມັນ}}
 * Latgalian: {{t|ltg|Vuoceja|f}}
 * Latin: {{t+|la|Germania|f}}
 * Latvian: {{t+|lv|Vācija|f}}
