--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -69,11 +69,12 @@ From the {{etyl|enm|en}} {{m|enm|cenyth}}, from the {{etyl|ML.|en}} {{term|cenit
 * Italian: {{t|it|zenit|m}}
 * Japanese: {{t|ja|天頂|tr=てんちょう, tenchō}}
 * Latin: {{t|la|cenit|n}} {{qualifier|Mediaeval}}
-{{trans-mid}}
 * Malay: {{t|ms|zenit}}
+{{trans-mid}}
 * Manx: {{t|gv|ard-niau}}
 * Maori: {{t|mi|kōmata o te rangi}}
 * Middle English: {{t|enm|cenyth}}
+* Navajo: {{t|nv|yá ʼałníiʼ-gi}}
 * Polish: {{t+|pl|zenit|m}}, {{t|pl|apogeum|n}}
 * Portuguese: {{t+|pt|zénite|m}} {{qualifier|Portugal}}, {{t+|pt|zênite|m}} {{qualifier|Brazil}}
 * Romanian: {{t+|ro|dric|m}}
@@ -94,13 +95,14 @@ From the {{etyl|enm|en}} {{m|enm|cenyth}}, from the {{etyl|ML.|en}} {{term|cenit
 * Dutch: {{t+|nl|zenit|n}}
 * Finnish: {{t|fi|lakipiste}}
 * French: {{t+|fr|zénith|m}}
-{{trans-mid}}
 * German: {{t+|de|Zenit|m}}
+{{trans-mid}}
 * Indonesian: {{t+|id|zenit}}
 * Japanese: {{t|ja|天頂|tr=てんちょう, tenchō}}
 * Malay: {{t|ms|zenit}}
 * Manx: {{t|gv|ard-niau}}
 * Maori: {{t|mi|[[kōmata]] ([[kōmata o te rangi|o te rangi]])}}
+* Navajo: {{t|nv|yá ʼałníiʼ-gi}}
 * Portuguese: {{t+|pt|zénite|m}} {{qualifier|Portugal}}, {{t+|pt|zênite|m}} {{qualifier|Brazil}}
 * Russian: {{t+|ru|зени́т|m}}
 * Turkish: {{t+|tr|zenit}}, {{t+|tr|zirve}}, {{t+|tr|doruk}}, {{t+|tr|tepe}}, {{t+|tr|ayyuk}}
