--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -74,7 +74,7 @@ From the {{etyl|enm|en}} {{m|enm|cenyth}}, from the {{etyl|ML.|en}} {{term|cenit
 * Manx: {{t|gv|ard-niau}}
 * Maori: {{t|mi|kōmata o te rangi}}
 * Middle English: {{t|enm|cenyth}}
-* Navajo: {{t|nv|yá ʼałníiʼ-gi}}
+* Navajo: {{t|nv|yá ʼałníiʼgi}}
 * Polish: {{t+|pl|zenit|m}}, {{t|pl|apogeum|n}}
 * Portuguese: {{t+|pt|zénite|m}} {{qualifier|Portugal}}, {{t+|pt|zênite|m}} {{qualifier|Brazil}}
 * Romanian: {{t+|ro|dric|m}}
@@ -102,7 +102,7 @@ From the {{etyl|enm|en}} {{m|enm|cenyth}}, from the {{etyl|ML.|en}} {{term|cenit
 * Malay: {{t|ms|zenit}}
 * Manx: {{t|gv|ard-niau}}
 * Maori: {{t|mi|[[kōmata]] ([[kōmata o te rangi|o te rangi]])}}
-* Navajo: {{t|nv|yá ʼałníiʼ-gi}}
+* Navajo: {{t|nv|yá ʼałníiʼgi}}
 * Portuguese: {{t+|pt|zénite|m}} {{qualifier|Portugal}}, {{t+|pt|zênite|m}} {{qualifier|Brazil}}
 * Russian: {{t+|ru|зени́т|m}}
 * Turkish: {{t+|tr|zenit}}, {{t+|tr|zirve}}, {{t+|tr|doruk}}, {{t+|tr|tepe}}, {{t+|tr|ayyuk}}
