{{rfd-sense}} <beautiful#34468780>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -22,9 +22,9 @@ From {{etyl|enm|en}} {{m|enm|bewteful}}, {{m|enm|beautefull||attractive to the e
 #: {{usex|It's '''beautiful''' outside, let's go for a walk.|lang=en}}
 # [[well|Well]] executed.
 #: {{usex|The skater performed a '''beautiful''' [[axel]].|lang=en}}
-# <!--not an interjection-->(''as a [[pro-sentence]]'') How beautiful that is!
+# {{rfd-sense}} <!--not an interjection-->(''as a [[pro-sentence]]'') How beautiful that is!
 #: {{usex|'''Beautiful'''! What a catch!|lang=en}} (referring to an athlete catching a ball)
-# <!--not an interjection-->(''as a pro-sentence; ironic'') How unfortunate that is!
+# {{rfd-sense}} <!--not an interjection-->(''as a pro-sentence; ironic'') How unfortunate that is!
 #: {{usex|'''Beautiful'''! I dropped the soup on the floor!|lang=en}}
 
 ====Usage notes====
