--- a/en/旸/旸.16928.wikitext
+++ b/en/旸/旸.16928.wikitext
@@ -5,7 +5,7 @@
 {{Han simp|暘|f=昜|t=𠃓}}
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=03|sn=7|four=|canj=ANSH}}
+{{Han char|rn=72|rad=日|as=03|sn=7|four=|canj=ANSH|ids=⿰日𠃓}}
 
 ====References====
 * {{Han ref|kx=0490.221|hdz=21488.010|uh=65F8|ud=26104}}
