/* English */ {{table:poker hands/en}} <straight#34476070>

--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -402,6 +402,9 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 # {{context|transitive|lang=en}} To [[straighten]].
 #: {{rfquotek|A. Smith}}
 
+===See also===
+{{table:poker hands/en}}
+
 [[Category:English terms with homophones]]
 
 ----
