t+shn:[[{{t-needed}}]] t+nod:[[{{t-needed}}]] t+za:[[{{t-needed}}]] t+khb:[[ᦙᦱ]] ([[WT:EDIT|Assisted]]) <come#34482978>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -206,6 +206,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Lithuanian: {{t+|lt|ateiti}}
 * Lojban: {{t+|jbo|klama}}
 {{trans-mid}}
+* Lü: {{t|khb|ᦙᦱ}}
 * Macedonian: {{t|mk|дојде|pf}}, {{t|mk|доаѓа|impf}}
 * Malay: {{t+|ms|datang}}, {{t|ms|mari}}
 * Maltese: {{t|mt|gie}}
@@ -214,6 +215,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Mongolian: {{t|mn|ирэх}}
 * Neapolitan: {{t|nap|venì}}
 * North Frisian: {{qualifier|Mooring}} {{t|frr|kaame}}, {{qualifier|Föhr-Amrum}} {{t|frr|kem}}
+* Northern Thai: {{t-needed|nod}}
 * Norwegian: {{t+|no|komme}}
 * Occitan: {{t+|oc|venir}}, {{t|oc|vir}}
 * Old English: {{t|ang|cuman}}
@@ -236,6 +238,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|доћи|pf|sc=Cyrl}}
 *: Roman: {{t|sh|doći|pf}}
+* Shan: {{t-needed|shn}}
 * Sicilian: {{t+|scn|vèniri}}
 * Sinhalese: {{t|si|එනවා|sc=Sinh}}
 * Slovak: {{t|sk|prichádzať|impf}}, {{t|sk|prísť|pf}}
@@ -267,6 +270,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Yiddish: {{t|yi|קומען|tr=komen|sc=Hebr}}
 * Yoruba: {{t-needed|yo}}
 * Zazaki: {{t|zza|amaene}}
+* Zhuang: {{t-needed|za}}
 * Zulu: {{t|zu|za|alt=-za}}
 {{trans-bottom}}
 
