--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -39,26 +39,26 @@ From Old Chinese '''*deʔ''' (Baxter-Sagart).
 {{zh-verb}}
 
 # {{context|Beginning Mandarin|copulative|lang=zh|sort=shi4}} to [[be]]. 
-#: {{zh-usex|泰晤士河 是 ^英國 第二 長 的 河流。|The River Thames '''is''' the second longest river in the UK.}}
-#: {{zh-usex|我 '''是''' 老師|I '''am''' a teacher}}
-#: {{zh-usex|我 '''是''' 中國人|I '''am''' Chinese.}}
-# to occupy a place.
-#: {{zh-usex|到處 都 是|to '''be''' everywhere}}
-#: {{zh-usex|房子 前面 是 禾場。|The threshing floor '''is''' in front of the house.}}
+#* {{zh-usex|泰晤士河 是 ^英國 第二 長 的 河流。|The River Thames '''is''' the second longest river in the UK.}}
+#* {{zh-usex|我 '''是''' 老師|I '''am''' a teacher}}
+#* {{zh-usex|我 '''是''' 中國人|I '''am''' Chinese.}}
+# to [[be]] {{gloss|to occupy a place}}
+#* {{zh-usex|到處 都 是|to '''be''' everywhere}}
+#* {{zh-usex|房子 前面 是 禾場。|The threshing floor '''is''' in front of the house.}}
 # {{non-gloss definition|A syntactic marker for [[emphasis]].}}
-#: {{zh-usex|我 是 昨天 買 的 票。|It '''was''' yesterday when I bought the ticket.}}
+#* {{zh-usex|我 是 昨天 買 的 票。|It '''was''' yesterday when I bought the ticket.}}
 
 ====Usage notes====
 Even if it is translated as to [[be]], 是 is used only to link two nouns or nominal expression.
-{{zh-usex|我 '''是''' 老師|I '''am''' a teacher}}
-{{zh-usex|泰晤士河 是 ^英國 第二 長 的 河流。|The River Thames '''is''' the second longest river in the UK.}}
+: {{zh-usex|我 '''是''' 老師|I '''am''' a teacher}}
+: {{zh-usex|泰晤士河 是 ^英國 第二 長 的 河流。|The River Thames '''is''' the second longest river in the UK.}}
 It can't be used to link a noun and an adjective. The following sentence is wrong : 
-: *这是好。
+: 这是好。
 The correct sentence is
-{{zh-usex|這 '''很''' 好|This '''is (very)''' good}}
+: {{zh-usex|這 '''很''' 好|This '''is (very)''' good}}
 Here [[很]] is used as a filler, to link a noun and an adjective and is not interpreted as very. Not using it would sound unnatural.
 A way to use 是 with an adjective is to use {{zh-l|的}} after the adjective to turn it into a noun.
-#: {{zh-usex|那 只 猫 '''是''' 黑 的|This cat is black (This cat is a black one)}}
+: {{zh-usex|那 只 猫 '''是''' 黑 的|This cat is black (This cat is a black one)}}
 
 ====See also====
 * (''Cantonese'') {{zh-l|係/系}}
