t+khb:[[ᦝᦱᧉᦜᧂᧈ]] ([[WT:EDIT|Assisted]]) <France#34492892>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -125,6 +125,7 @@ From {{etyl|fr|en}} {{term|France|lang=fr}}, {{etyl|fro|en}} {{term|France|lang=
 * Luhya: {{t|luy|Frans}}
 * Luo: {{t|luo|Frans}}
 * Luxembourgish: {{t+|lb|Frankräich|n}}
+* Lü: {{t|khb|ᦝᦱᧉᦜᧂᧈ}}
 * Macedonian: {{t+|mk|Фра́нција|f}}
 * Malagasy: {{t+|mg|Frantsa}}
 * Malay: {{t|ms|Perancis}}
