--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -75,6 +75,7 @@
 * Catalan: {{t|ca|maó|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|磚塊|sc=Hani}}, {{t+|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t+|cmn|磚頭|sc=Hani}}, {{t+|cmn|砖头|tr=zhuāntóu|sc=Hani}}
+* Crimean Tatar: {{t|crh|tola}}, {{t|crh|kirpiç}}
 * Czech: {{t+|cs|cihla|f}}
 * Danish: {{t+|da|mursten|c}}
 * Dutch: {{t+|nl|baksteen|m}}
@@ -170,6 +171,7 @@
 * Catalan: {{t|ca|maó|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|磚塊|sc=Hani}}, {{t+|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t+|cmn|磚頭|sc=Hani}}, {{t+|cmn|砖头|tr=zhuāntóu|sc=Hani}}
+* Crimean Tatar: {{t|crh|tola}}, {{t|crh|kirpiç}}
 * Czech: {{t+|cs|cihla}}
 * Danish: {{t+|da|mursten|c}}
 * Dutch: {{t+|nl|baksteen|m}}
