--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -178,6 +178,11 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 # {{context|nautical|transitive|chiefly|imperative|lang=en}} To turn or put to the [[left]] or [[larboard]] side of a [[ship]]; said of the [[helm]].
 #: '''''Port''' your helm!''
 
+====Translations====
+{{trans-top|}}
+{{trans-mid}}
+{{trans-bottom}}
+
 ===Etymology 2===
 From {{etyl|la|en}} {{term|porta||passage, gate|lang=la}}, reinforced in {{etyl|enm|en}}, from {{etyl|fro|en}} {{term|porte|lang=fro}}.
 
