--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -181,6 +181,7 @@ From {{etyl|ang|en}} {{term|port|lang=ang}}, from {{etyl|la|en}} {{term|portus||
 ====Translations====
 {{trans-top|}}
 {{trans-mid}}
+* Maori: {{t|mi|tīrau}}
 {{trans-bottom}}
 
 ===Etymology 2===
