--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -292,6 +292,13 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 
 ==Portuguese==
 
+===Etymology===
+Borrowed from {{etyl|la|pt}} {{m|la|Israel}}, from {{etyl|grc|pt}} {{m|grc|Ἰσραήλ}}, from {{etyl|he|pt}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}. Displaced Old Portuguese {{m|roa-opt|Irrael}}.
+
+===Pronunciation===
+* {{a|Portugal}} {{IPA|/iʒ.ʁɐ.ˈɛɫ/|lang=pt}}
+* {{hyphenation|Is|ra|el|lang=pt}}
+
 ===Proper noun===
 {{pt-proper noun|m}}
 
