--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -293,7 +293,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 ==Portuguese==
 
 ===Etymology===
-Borrowed from {{etyl|la|pt}} {{m|la|Israel}}, from {{etyl|grc|pt}} {{m|grc|Ἰσραήλ}}, from {{etyl|he|pt}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}. Displaced Old Portuguese {{m|roa-opt|Irrael}}.
+Borrowed from {{etyl|la|pt}} {{m|la|Israel}}, from {{etyl|grc|pt}} {{m|grc|Ἰσραήλ}}, from {{etyl|he|pt}} {{term|יִשְׂרָאֵל||Israel|lang=he|tr=yisra'él}}. Displaced {{etyl|roa-opt|-}} {{m|roa-opt|Irrael}}.
 
 ===Pronunciation===
 * {{a|Portugal}} {{IPA|/iʒ.ʁɐ.ˈɛɫ/|lang=pt}}
