--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -64,6 +64,7 @@ From {{etyl|la|en}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id 
 * Swedish: {{t+|sv|dvs}}, {{t+|sv|d v s}}, {{t+|sv|d.v.s.}}
 * Turkish: {{t+|tr|yani}}
 * Ukrainian: {{t+|uk|то́бто|sc=Cyrl}}
+* Urdu: {{t|ur|يعني|sc=ur-Arab}}
 {{trans-bottom}}
 
 ===Anagrams===
