--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -51,8 +51,8 @@
 ====Compounds====
 * {{term|映る||to be [[reflect|reflected]]|tr=うつる, utsuru|lang=ja|sc=Jpan}}
 * {{term|映画||[[movie]]|tr=えいが, eiga|lang=ja|sc=Jpan}}
-* {{term|映写|lang=ja|sc=Jpan}}
-* {{term|映像|lang=ja|sc=Jpan}}
+* {{term|映写||[[projection]]|tr=えいじゃ, eija|lang=ja|sc=Jpan}}
+* {{term|映像||[[reflection]]|tr=えいぞう, eizou|lang=ja|sc=Jpan}}
 
 ----
 
