--- a/en/א/ארץ.2112.wikitext
+++ b/en/א/ארץ.2112.wikitext
@@ -7,28 +7,28 @@ From {{etyl|sem-pro|he}} {{m|sem-pro|*ʾarṣ́-}}. Compare {{etyl|ar|-}} {{m|ar
 * {{a|IL}} {{IPA|/ˈeret͡s/|lang=he}}
 
 ===Noun===
-{{he-noun|g=f|tr=érets|wv=אֶרֶץ|pl=ארצות|plwv=אֲרָצוֹת|cons=ארץ|conswv=אֶרֶץ־|plcons=ארצות|plconswv=אַרְצוֹת־|pausalwv=אָרֶץ}}
+{{he-noun|g=f|tr='érets|wv=אֶרֶץ|pl=ארצות|plwv=אֲרָצוֹת|cons=ארץ|conswv=אֶרֶץ־|plcons=ארצות|plconswv=אַרְצוֹת־|pausalwv=אָרֶץ}}
 
 # [[country]], [[land]]
 # [[territory]], [[district]], [[region]]
 # [[earth]], [[Earth]]
 #* {{RQ:Tanach|1|1|1|t=JPS}}
-#*: {{ux|he|בְּרֵאשִׁית בָּרָא אֱלֹהִים אֵת הַשָּׁמַיִם וְאֵת '''הָאָרֶץ'''׃|tr=bereshít bará elohím ét hashamáyim veét '''haáretz'''.|In the beginning God created the heaven and '''the earth'''.}}
+#*: {{ux|he|בְּרֵאשִׁית בָּרָא אֱלֹהִים אֵת הַשָּׁמַיִם וְאֵת '''הָאָרֶץ'''׃|tr=b'reshít bará 'elohím 'ét hashamáyim v'ét '''ha'árets'''.|In the beginning God created the heaven and '''the earth'''.}}
 # [[ground]], [[soil]]
 # {{context|definite|popular|lang=he}} [[Israel]]
 
 =====Usage notes=====
-* The definite form of this noun is {{m|he|הָאָרֶץ|tr=haáretz}}.
+* The definite form of this noun is {{m|he|הָאָרֶץ|tr=ha'árets}}.
 
 ====Synonyms====
-* {{l|he|אֲדָמָה|tr=adamá}}
+* {{l|he|אֲדָמָה|tr='adamá}}
 
 ====Derived terms====
-* {{l|he|אַרְצִי|tr=artzí}}
-* {{l|he|כַּדּוּר הָאָרֶץ|tr=kadúr haáretz}}
-* {{l|he|חוּץ לָאָרֶץ|tr=ḥutz laáretz}}
-* {{l|he|אֶרֶץ יִשְׂרָאֵל|tr=éretz yisraél}}
-* {{l|he|אַרְצוֹת הַבְּרִית|tr=artzót habrít}}
+* {{l|he|אַרְצִי|tr='artsí}}
+* {{l|he|כַּדּוּר הָאָרֶץ|tr=kadúr ha'áretz}}
+* {{l|he|חוּץ לָאָרֶץ|tr=khutz la'áretz}}
+* {{l|he|אֶרֶץ יִשְׂרָאֵל|tr='érets yisra'él}}
+* {{l|he|אַרְצוֹת הַבְּרִית|tr='ar'tsót hab'rít}}
 
 ====See also====
 * {{l|he|מְדִינָה|tr=m'diná}}
