--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -74,6 +74,7 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Armenian: {{t|hy|սրբապատկեր}}, {{t|hy|պատկեր}}
 * Asturian: {{t|ast|iconu|m}}
 * Bashkir: {{t|ba|тәре|sc=Cyrl}}
+* Belarusian: {{t|be|ікона|f|sc=Cyrl}}
 * Bulgarian: {{t+|bg|икона|f|sc=Cyrl}}
 * Catalan: {{t|ca|icona|f}}
 * Chinese:
@@ -110,6 +111,7 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Slovene: {{t+|sl|ikona|f}}
 * Spanish: {{t+|es|icono|m}}, {{t|es|ícono|m}}
 * Swedish: {{t+|sv|ikon|c}}
+* Ukrainian: {{t+|uk|ікона|f|sc=Cyrl}}
 * Yup'ik: {{t|esu|ikuunaq}}
 {{trans-bottom}}
 
