t+eu:[[ikono]] t+tr:[[ikon]] ([[WT:EDIT|Assisted]]) <icon#34528522>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -74,6 +74,7 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Armenian: {{t|hy|սրբապատկեր}}, {{t|hy|պատկեր}}
 * Asturian: {{t|ast|iconu|m}}
 * Bashkir: {{t|ba|тәре|sc=Cyrl}}
+* Basque: {{t|eu|ikono}}
 * Belarusian: {{t|be|ікона|f|sc=Cyrl}}
 * Bulgarian: {{t+|bg|икона|f|sc=Cyrl}}
 * Catalan: {{t|ca|icona|f}}
@@ -112,6 +113,7 @@ From {{etyl|la|en}} {{term|icon|lang=la}}, from {{etyl|grc|en}} {{term|εἰκώ
 * Slovene: {{t+|sl|ikona|f}}
 * Spanish: {{t+|es|icono|m}}, {{t|es|ícono|m}}
 * Swedish: {{t+|sv|ikon|c}}
+* Turkish: {{t+|tr|ikon}}
 * Ukrainian: {{t+|uk|ікона|f|sc=Cyrl}}
 * Yup'ik: {{t|esu|ikuunaq}}
 {{trans-bottom}}
