--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -383,6 +383,24 @@ Named from {{etyl|pt|en}} [[Oporto]], a city in [[Portugal]] from whence the win
 
 ----
 
+==Catalan==
+
+===Etymology 1===
+{{etyl|la|ca}}
+
+====Noun====
+{{ca-noun|m}}
+
+# {{l|en|port}}, [[harbour]]
+
+===Etymology 2===
+From {{l|ca|portar}}
+
+====Noun====
+{{ca-noun|m}}
+
+# [[wearing]]
+----
 ==Danish==
 
 ===Etymology===
