--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -88,6 +88,7 @@ From {{etyl|enm|en}} {{m|enm|felen}}, from {{etyl|ang|en}} {{m|ang|fēlan||to fe
 {{rel-mid3}}
 * {{l/en|feeler}}
 * {{l/en|feel-good}}
+* {{l/en|feelgoodery}}
 * {{l/en|feeling}}
 * {{l/en|feely}}
 * {{l/en|forefeel}}
