t+za:[[daeuj]] ([[WT:EDIT|Assisted]]) <come#34539013>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -270,7 +270,7 @@ The meaning of ''to ejaculate'' is considered rude slang. Many style guides and 
 * Yiddish: {{t|yi|קומען|tr=komen|sc=Hebr}}
 * Yoruba: {{t-needed|yo}}
 * Zazaki: {{t|zza|amaene}}
-* Zhuang: {{t-needed|za}}
+* Zhuang: {{t|za|daeuj}}
 * Zulu: {{t|zu|za|alt=-za}}
 {{trans-bottom}}
 
