t+ur:[[کچھوا]] ([[WT:EDIT|Assisted]]) <tortoise#34542099>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -112,6 +112,7 @@
 * Turkish: {{t+|tr|kaplumbağa}}, {{t+|tr|tosbağa}}
 * Turkmen: {{qualifier|tortoise or turtle}} {{t|tk|pyşbaga}}
 * Ukrainian: {{qualifier|tortoise or turtle}} {{t|uk|черепаха|f|tr=čerepáxa}}
+* Urdu: {{t|ur|کچھوا|m|tr=kachuvā|sc=ur-Arab}} {{qualifier|tortoise or turtle}}
 * Uyghur:
 *: Cyrillic: {{t|ug|ташпақа|sc=Cyrl}}
 *: Persic: {{t|ug|تاشپاقا|sc=fa-Arab}}
