--- a/en/偉/偉.11097.wikitext
+++ b/en/偉/偉.11097.wikitext
@@ -7,13 +7,13 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=09|sn=12|four=24256|canj=ODMQ|ids=⿰亻韋}}
 
-# [[extraordinary]], [[magnificent]], [[great]]
+# [[extraordinary]]; [[great]]; [[exceptionally]] [[excellent]]
 
 ====Descendants====
 * [[伟]]
 
 ====Antonyms====
-* [[凡]] ([[ordinary]], [[mediocre]])
+* [[庸]], [[凡]] ([[ordinary]], [[petty]], [[mediocre]])
 
 ====References====
 * {{Han ref|kx=0110.050|dkj=00837|dj=0234.020|hdz=10198.040|uh=5049|ud=20553|bh=B0B6|bd=45238}}
