/* Derived terms */ <play#34559375>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -617,7 +617,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Swedish: {{t+|sv|drag|n}}
 {{trans-bottom}}
 
-====Derived terms====
+===Derived terms===
 {{rel-top3|Terms derived from the noun or verb ''play''}}
 * [[airplay]]
 * [[all work and no play makes Jack a dull boy]]
@@ -655,8 +655,8 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * [[play doctor]]
 * [[playdough]]
 * [[play down]]
-{{rel-mid3}}
 * [[play dumb]]
+{{rel-mid3}}
 * [[player]]
 * [[play fair]]
 * [[play fast and loose]]
@@ -693,8 +693,8 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * [[play someone like a fiddle]]
 * [[playsuit]]
 * [[play the angles]]
-{{rel-mid3}}
 * [[play the devil]]
+{{rel-mid3}}
 * [[play the field]]
 * [[play the fool]]
 * [[play the hand one is dealt]]
@@ -711,6 +711,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * [[play upon]]
 * [[playwear]]
 * [[play with]]
+* [[play with a full deck]]
 * [[play with fire]]
 * [[play with oneself]]
 * [[playwright]]
