--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -38,6 +38,7 @@
 * Japanese: {{t|ja|骨髄|tr=こつずい, kotsuzui}}
 * Kazakh: {{t|kk|сүйек майы|sc=Cyrl}}
 * Korean: {{t+|ko|골수|sc=Kore}}
+* Lao: {{t|lo|ໄຂກະດູກ|sc=Laoo}}
 * Latin: {{t|la|medulla ossium|f}}
 * Latvian: {{t|lv|kaulu smadzenes|p}}
 {{trans-mid}}
