--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -17,6 +17,7 @@
 * Azeri: {{t|az|sümük iliyi}}
 * Belarusian: {{t|be|касця́вы мозг|m|sc=Cyrl}}
 * Bulgarian: {{t|bg|ко́стен мо́зък|m|sc=Cyrl}}
+* Burmese: {{t+|my|ရိုးတွင်းခြင်ဆီ|sc=Mymr}}
 * Catalan: {{t|ca|medul·la òssia|f}}, {{t+|ca|bessó|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|骨髓|tr=gǔsuǐ|sc=Hani}}
@@ -38,10 +39,11 @@
 * Japanese: {{t|ja|骨髄|tr=こつずい, kotsuzui}}
 * Kazakh: {{t|kk|сүйек майы|sc=Cyrl}}
 * Korean: {{t+|ko|골수|sc=Kore}}
+* Kyrgyz: {{t|ky|жиликтин чучугу|sc=Cyrl}}, {{t|ky|кемиктин майы|sc=Cyrl}}
 * Lao: {{t|lo|ໄຂກະດູກ|sc=Laoo}}
+{{trans-mid}}
 * Latin: {{t|la|medulla ossium|f}}
 * Latvian: {{t|lv|kaulu smadzenes|p}}
-{{trans-mid}}
 * Lithuanian: {{t|lt|kaulų čiulpai|p}}
 * Macedonian: {{t|mk|коскена срж|f|sc=Cyrl}}
 * Mongolian: {{t+|mn|чөмөг|sc=Cyrl}}
