t+cu:[[Нѣмьци]] t+got:[[𐌸𐌹𐌿𐌳𐌹𐍃𐌺𐌰𐌻𐌰𐌽𐌳]] ([[WT:EDIT|Assisted]]) <Germany#34593076>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -160,6 +160,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 *: Middle High German: {{t|gmh|Tiutschlant|n}}
 *: Alemannic German: {{t|gsw|Dytschland}}
 *: Rhine Franconian: {{t|gmw-rfr|Daitschlond}} {{qual|Palatine}}
+* Gothic: {{t|got|𐌸𐌹𐌿𐌳𐌹𐍃𐌺𐌰𐌻𐌰𐌽𐌳|sc=Goth}}
 * Gottscheerish: {{t|gmw-gts|Taitšlont}}
 * Greek: {{t+|el|Γερμανία|f}}
 * Guaraní: {{t|gn|Alemaña}}
@@ -229,6 +230,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * Norwegian: {{t+|no|Tyskland}}, {{t|no|Føderale Republikken Tyskland}}
 * Novial: {{t-needed|nov}}
 * Occitan: {{t+|oc|Alemanha|f}}
+* Old Church Slavonic: {{t|cu|Нѣмьци|sc=Cyrs}}
 * Old French: {{t|fro|Alemaigne|f}}
 * Old Provençal: {{t|pro|Alamagna}}
 * Oriya: {{t+|or|ଜର୍ମାନୀ|sc=Orya}}
