--- a/en/映/映.16968.wikitext
+++ b/en/映/映.16968.wikitext
@@ -1,6 +1,6 @@
 {{also|暎}}
 ==Translingual==
-
+{{Han compound|日|央|c1=s|c2=p|t1=sun|ls=psc}}
 ===Han character===
 {{Han char|rn=72|rad=日|as=05|sn=9|four=64034|canj=ALBK|ids=⿰日央}}
 
