/* Derived terms */ <count#35131992>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -35,6 +35,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 
 =====Derived terms=====
 {{rel-top|Terms derived from ''count'' (verb)}}
+* [[count cards]]
 * [[count one's blessings]]
 * [[count out]]
 {{rel-mid}}
