t+az:[[Birləşmiş Krallıq]] ([[WT:EDIT|Assisted]]) <United Kingdom#35167687>

--- a/en/u/United Kingdom.2101.wikitext
+++ b/en/u/United Kingdom.2101.wikitext
@@ -24,6 +24,7 @@
 * Arabic: {{t|ar|اَلْمَمْلَكَة اَلْمُتَّحِدَة|f|tr=al-mamlaka l-muttaḥida}}
 * Armenian: {{t|hy|Միացյալ Թագավորություն}}
 * Asturian: {{t+|ast|Reinu Xuníu|m}}
+* Azeri: {{t|az|Birləşmiş Krallıq}}
 * Basque: {{t+|eu|Erresuma Batua}}
 * Belarusian: {{t|be|Злу́чанае Карале́ўства|n}}, {{t|be|Аб'ядна́нае Карале́ўства|n}}
 * Bengali: {{t|bn|যুক্তরাজ্য|tr=Juktôrajjô|sc=Beng}}
