--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -303,8 +303,8 @@ Borrowed from {{etyl|la|pt}} {{m|la|Israel}}, from {{etyl|grc|pt}} {{m|grc|Ἰσ
 ===Proper noun===
 {{pt-proper noun|m}}
 
-# {{l|en|Israel}} {{gloss|historical region in the southern part of the Levant}}
-# {{l|en|Israel}} {{gloss|a modern country in the Middle East}}
+# {{place|pt|historical region|in the southern|contregion/Levant|t1=Israel}}
+# {{place|pt|country|in|contregion/the Middle East|continent/Asia|t1=Israel}}
 # {{given name|male|lang=pt}}
 
 ----
